--- a/UCBC 2024/Simulations/Bidding3D.ipynb
+++ b/UCBC 2024/Simulations/Bidding3D.ipynb
@@ -22,7 +22,16 @@
      "text": [
       "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
-      "non-resource variables are not supported in the long term\n"
+      "non-resource variables are not supported in the long term\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-3961000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-1887000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-1562000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy-920000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/righty-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/decl-1000000\n"
      ]
     }
    ],
@@ -38,32 +47,8 @@
     "import numpy as np\n",
     "\n",
     "np.set_printoptions(precision=2, suppress=True, linewidth=200)\n",
-    "np.random.seed(42)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "44786d5d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-3233000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-3233000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-31102000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/lefty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/dummy-920000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/righty-1000000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/decl-1000000\n"
-     ]
-    }
-   ],
-   "source": [
+    "np.random.seed(42)\n",
+    "\n",
     "models = Models.from_conf(conf.load('../Conf/UCBC2024.conf'),'..')   # loading neural networks\n",
     "sampler = Sample.from_conf(conf.load('../Conf/UCBC2024.conf'), False)  # Load sampling strategies\n"
    ]
@@ -78,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "19dbfeb7",
    "metadata": {},
    "outputs": [
@@ -86,10 +71,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'call': '3D', 'insta_score': 0.9623}, {'call': '2D', 'insta_score': 0.0216}, {'call': 'PASS', 'insta_score': 0.0103}, {'call': '3N', 'insta_score': 0.0037}, {'call': '4D', 'insta_score': 0.0013}]\n",
-      "[{'call': '3D', 'insta_score': 0.9647}, {'call': '2D', 'insta_score': 0.0136}, {'call': 'PASS', 'insta_score': 0.0091}, {'call': '3N', 'insta_score': 0.007}, {'call': '4D', 'insta_score': 0.0039}, {'call': '5D', 'insta_score': 0.0011}]\n",
-      "[{'call': '3D', 'insta_score': 0.9623}, {'call': '2D', 'insta_score': 0.0216}, {'call': 'PASS', 'insta_score': 0.0103}, {'call': '3N', 'insta_score': 0.0037}, {'call': '4D', 'insta_score': 0.0013}]\n",
-      "[{'call': '3D', 'insta_score': 0.9647}, {'call': '2D', 'insta_score': 0.0136}, {'call': 'PASS', 'insta_score': 0.0091}, {'call': '3N', 'insta_score': 0.007}, {'call': '4D', 'insta_score': 0.0039}, {'call': '5D', 'insta_score': 0.0011}]\n"
+      "[{'call': '3D', 'insta_score': 0.979}]\n",
+      "[{'call': '3D', 'insta_score': 0.968}]\n",
+      "[{'call': '3D', 'insta_score': 0.979}]\n",
+      "[{'call': '3D', 'insta_score': 0.968}]\n"
      ]
     }
    ],
@@ -101,12 +86,6 @@
     "hand = '85.9.KQJT873.QJT'\n",
     "\n",
     "# the auction goes:\n",
-    "# (a few words about 'PAD_START':\n",
-    "# the auction is padded to dealer North\n",
-    "# if North is not dealer, than we have to put in a 'PAD_START' for every seat that was skipped\n",
-    "# if East deals we have one pad (because North is skipped)\n",
-    "# if South deals we have two pads (because North and East are skipped)\n",
-    "# etc.)\n",
     "auction = []\n",
     "bot_bid = BotBid([vuln_ns, vuln_ew], hand, models, sampler, False)\n",
     "\n",
@@ -133,17 +112,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "bfe98f56",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'call': 'PASS', 'insta_score': 1.0}]"
+       "[{'call': 'PASS', 'insta_score': 1.0, 'expected_score': 392, 'adjustment': 50},\n",
+       " {'call': '5D',\n",
+       "  'insta_score': 0.0,\n",
+       "  'expected_score': -450,\n",
+       "  'adjustment': -1751}]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,26 +164,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "55b647a5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['AKQx.AQJTx..AKxx Jx.Kx.A9xxxx.98x T9xxx.8xxxx..xxx 8x.9.KQJT8xx.QJT 0.07125',\n",
-       " 'AKQxx.AKxxx..A8x Jx.Q8x.A9xxxx.Kx T9xx.JTxx..9xxxx 8x.9.KQJT8xx.QJT 0.06242',\n",
-       " 'AKTxx.AKQ8x..A9x xx.Txx.A9xxxx.Kx QJ9x.Jxxx..8xxxx 8x.9.KQJT8xx.QJT 0.03983',\n",
-       " 'AKJx.AKJxx..K8xx Q9.xx.A9xxxx.Axx Txxxx.QT8xx..9xx 8x.9.KQJT8xx.QJT 0.03391',\n",
-       " 'AKJ.AKJxxx..AKxx Qxx.Tx.A9xxxx.xx T9xxx.Q8xx..98xx 8x.9.KQJT8xx.QJT 0.03087',\n",
-       " 'AKT9.AKQxx..K8xx Qxx.8xx.A9xxxx.x Jxxx.JTxx..A9xxx 8x.9.KQJT8xx.QJT 0.03009',\n",
-       " 'AKQxxx.AQTxx..K9 Jx.x.A9xxxx.xxxx T9x.KJ8xxx..A8xx 8x.9.KQJT8xx.QJT 0.02665',\n",
-       " 'AQTxx.AKQxx..Kxx Jx.JTx.A9xxxx.xx K9xx.8xxx..A98xx 8x.9.KQJT8xx.QJT 0.02089',\n",
-       " 'Kxxx.AKQxx..AKxx A9.Jxx.A9xxxx.8x QJTxx.T8xx..9xxx 8x.9.KQJT8xx.QJT 0.01778',\n",
-       " 'AK9.AKJxx..AK8xx QTx.8x.A9xxxx.xx Jxxxx.QTxxx..9xx 8x.9.KQJT8xx.QJT 0.01670']"
+       "['AQJx.AKTxx..A8xx Txx.QJ8.A9xxxx.K K9xx.xxxx..9xxxx 8x.9.KQJT8xx.QJT 0.05584 \\n 2D-P-P-X-P-P-P (9.6)  \\n 2D-P-P-X-P-P-5D-X-P-P-P (9.6) ',\n",
+       " 'AKQJT.JT8xx..AKx xx.Axx.A9xxxx.xx 9xxx.KQxx..98xxx 8x.9.KQJT8xx.QJT 0.02452 \\n 2D-P-P-X-P-P-P (9.8)  \\n 2D-P-P-X-P-P-5D-X-P-P-P (9.8) ',\n",
+       " 'AT9x.KJxx..AKxxx xx.Qxx.A9xxxx.8x KQJxx.AT8xx..9xx 8x.9.KQJT8xx.QJT 0.02050 \\n 2D-P-P-X-P-P-P (8.5)  \\n 2D-P-P-X-P-P-5D-X-P-P-P (8.5) ',\n",
+       " 'AK9xx.AQJxxx..Ax Jx.Kx.A9xxxx.9xx QTxx.T8xx..K8xxx 8x.9.KQJT8xx.QJT 0.01909 \\n 2D-P-P-X-P-P-P (8.5)  \\n 2D-P-P-X-P-P-5D-X-P-P-P (8.5) ',\n",
+       " 'AKTx.KJxx..Axxxx J9x.QTx.A9xxxx.8 Qxxx.A8xxx..K9xx 8x.9.KQJT8xx.QJT 0.01766 \\n 2D-P-P-X-P-P-P (9.2)  \\n 2D-P-P-X-P-P-5D-X-P-P-P (9.2) ',\n",
+       " 'AK9x.AKQJx..AKxx QJx.xx.A9xxxx.xx Txxx.T8xxx..98xx 8x.9.KQJT8xx.QJT 0.01453 \\n 2D-P-P-X-P-P-P (8.7)  \\n 2D-P-P-X-P-P-5D-X-P-P-P (8.7) ',\n",
+       " 'AJxxxx.AQJx..AKx T.KTx.A9xxxx.8xx KQ9x.8xxxx..9xxx 8x.9.KQJT8xx.QJT 0.01324 \\n 2D-P-P-X-P-P-P (9.5)  \\n 2D-P-P-X-P-P-5D-X-P-P-P (9.5) ',\n",
+       " 'AK9xxx.KQx..AKxx JT.Ax.A9xxxx.xxx Qxx.JT8xxxx..98x 8x.9.KQJT8xx.QJT 0.01264 \\n 2D-P-P-X-P-P-P (9.0)  \\n 2D-P-P-X-P-P-5D-X-P-P-P (9.0) ',\n",
+       " 'AQTxx.KQJxx..AKx J9x.8xx.A9xxxx.x Kxx.ATxx..98xxxx 8x.9.KQJT8xx.QJT 0.01100 \\n 2D-P-P-X-P-P-P (9.0)  \\n 2D-P-P-X-P-P-5D-X-P-P-P (9.0) ',\n",
+       " 'AQ9x.KQ8x..A9xxx xxx.Ax.A9xxxx.8x KJTx.JTxxxx..Kxx 8x.9.KQJT8xx.QJT 0.01027 \\n 2D-P-P-X-P-P-P (9.1)  \\n 2D-P-P-X-P-P-5D-X-P-P-P (9.1) ']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "7101e514",
    "metadata": {},
    "outputs": [
@@ -229,16 +212,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8x.9.KQJT8xx.QJT 9x.AJxxx.9xx.xxx AKQxxx.KTxx..AK9 JTx.Q8x.Axx.8xxx\n",
-      "8x.9.KQJT8xx.QJT Jxx.KTxx.x.8xxxx KQTxxx.QJxx.A.AK A9.A8xx.9xxx.9xx\n",
-      "8x.9.KQJT8xx.QJT xxx.KQJx.9x.8xxx AKQJ9x.ATxx..A9x Tx.8xxx.Axxx.Kxx\n",
-      "8x.9.KQJT8xx.QJT 9xx.KJTxx.Ax.xxx AQJTxx.Axxx..AK8 Kx.Q8x.9xxx.9xxx\n",
-      "8x.9.KQJT8xx.QJT J.A8xx.A9xx.8xxx AKQTxx.QTxx.x.AK 9xxx.KJxx.x.9xxx\n",
-      "8x.9.KQJT8xx.QJT xx.A8xx.9xx.Kxxx AKQ9xx.QJxx.Ax.A JTx.KTxx.x.98xxx\n",
-      "8x.9.KQJT8xx.QJT x.KTxx.xx.K98xxx AKQJT9x.AQ8x.A.A xxx.Jxxx.9xx.xxx\n",
-      "8x.9.KQJT8xx.QJT J.KTxxx.Axx.8xxx AKQTxx.AQJ8..K9x 9xxx.xxx.9xx.Axx\n",
-      "8x.9.KQJT8xx.QJT Txx.Axx.Ax.9xxxx AKQ9xx.KQJxx..AK Jx.T8xx.9xxx.8xx\n",
-      "8x.9.KQJT8xx.QJT xx.KJTxx.xx.K8xx AKQJ9xx.AQxx.A.A Tx.8xx.9xx.9xxxx\n"
+      "8x.9.KQJT8xx.QJT x.J8xxx.9xxx.Kxx AKQJ9.AKxx..A9xx Txxxx.QTx.Ax.8xx\n",
+      "8x.9.KQJT8xx.QJT K9xx.J8xx.9x.8xx AQJTx.AKTx..AKxx xx.Qxxx.Axxx.9xx\n",
+      "8x.9.KQJT8xx.QJT Tx.QJxx.9x.98xxx AKQ9xx.K8xx.Ax.A Jxx.ATxx.xx.Kxxx\n",
+      "8x.9.KQJT8xx.QJT KQ9.xxx.xx.xxxxx AJxxxx.AKT8.A9.K Tx.QJxxx.xx.A98x\n",
+      "8x.9.KQJT8xx.QJT 9.xxxx.9xxx.K8xx AKQJTx.AQ8x.Ax.x xxxx.KJTx..A9xxx\n",
+      "8x.9.KQJT8xx.QJT JTx.8xx.9x.Axxxx AKQxx.AKQJ.Axx.x 9xx.Txxxx.x.K98x\n",
+      "8x.9.KQJT8xx.QJT J9x.QJ8xx.x.9xxx AKQTxx.AKTx.9x.A xx.xxx.Axx.K8xxx\n",
+      "8x.9.KQJT8xx.QJT J9x.T8xx.A9xx.8x AKxxx.AKJx..AK9x QTx.Qxxx.xx.xxxx\n",
+      "8x.9.KQJT8xx.QJT x.JT8x.9x.Kxxxxx KQJxx.AKxx.Axx.A AT9xx.Qxxx.x.98x\n",
+      "8x.9.KQJT8xx.QJT Txx.K8xxx.9xx.8x AKQJ9x.AQJx.A.xx xx.Txx.xx.AK9xxx\n"
      ]
     }
    ],
