--- a/UCBC 2024/Simulations/Bidding5D.ipynb
+++ b/UCBC 2024/Simulations/Bidding5D.ipynb
@@ -51,11 +51,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-3233000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-3233000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-3961000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-1887000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-1562000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/dummy-920000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty-1000000\n",
@@ -85,14 +85,13 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': '3D',\n",
-       "  'insta_score': 0.3567,\n",
-       "  'expected_score': -78,\n",
-       "  'adjustment': 18},\n",
+       "[{'call': '3D', 'insta_score': 0.365, 'expected_score': -80, 'adjustment': 18},\n",
        " {'call': 'PASS',\n",
-       "  'insta_score': 0.6131,\n",
-       "  'expected_score': -162,\n",
-       "  'adjustment': 31}]"
+       "  'insta_score': 0.266,\n",
+       "  'expected_score': -81,\n",
+       "  'adjustment': 13},\n",
+       " {'call': 'X', 'insta_score': 0.123, 'expected_score': -140, 'adjustment': 6},\n",
+       " {'call': '4D', 'insta_score': 0.128, 'expected_score': -178, 'adjustment': 6}]"
       ]
      },
      "execution_count": 3,
@@ -131,11 +130,20 @@
     {
      "data": {
       "text/plain": [
-       "['J.J8x.A98xxx.Txx Q.AQT9xx.Jxx.K9x AKx.Kxx.KTx.Q8xx T98xxxxx.x.Q.AJx 0.24957 1H-1N-2S-P-3H-P-4S-P-P-P (9.2)  1H-1N-2S-3D-3H-P-4S-P-P-P (9.2) ',\n",
-       " 'J.J8x.A98xxx.Txx 98x.AKQ9xxx..K9x Ax.Txx.KQJxx.AJx KQTxxxx..Tx.Q8xx 0.23582 1H-1N-2S-P-4H-P-P-P (10.1)  1H-1N-2S-3D-4H-P-P-P (10.1) ',\n",
-       " 'J.J8x.A98xxx.Txx xx.AKQxxx.QT.J8x Q9x.T9x.KJx.AKQ9 AKT8xxx.x.xx.xxx 0.20850 1H-1N-2S-P-3H-P-4S-P-P-P (8.8)  1H-1N-2S-3D-3H-P-3S-P-4H-P-P-P (8.1) ',\n",
-       " 'J.J8x.A98xxx.Txx Qxx.AQxxxx.Q.J9x xx.KT9x.KJT.AKQx AKT98xx..xxx.8xx 0.20784 1H-1N-2S-P-3H-P-4S-P-P-P (9.7)  1H-1N-2S-3D-P-P-P (9.6) ',\n",
-       " 'J.J8x.A98xxx.Txx 8x.QT9xxx.KQx.Ax KQx.AKx.JTx.QJ98 AT9xxxx.x.x.Kxxx 0.20739 1H-1N-2S-P-3H-P-4S-P-P-P (9.1)  1H-1N-2S-3D-3H-P-4S-P-P-P (9.1) ']"
+       "['J.J8x.A98xxx.Txx A9x.Kxxxx.Tx.Kxx K8.AQT.Jxx.AJ8xx QTxxxxx.9x.KQ.Q9 0.43463 \\n 1H-1N-2S-3D-P-P-4S-P-P-P (7.6)  \\n 1H-1N-2S-P-P-3C-3S-4D-P-P-P (10.5)  \\n 1H-1N-2S-4D-P-P-P (10.5)  \\n 1H-1N-2S-X-P-3C-X-P-P-P (9.4) ',\n",
+       " 'J.J8x.A98xxx.Txx K.AQT9xx.JT.J9xx Q9xx.Kx.KQx.KQ8x AT8xxxx.xx.xx.Ax 0.39905 \\n 1H-1N-2S-3D-3H-P-P-4D-P-P-P (9.3)  \\n 1H-1N-2S-P-3H-P-P-4D-P-P-P (9.3)  \\n 1H-1N-2S-4D-P-P-P (9.3)  \\n 1H-1N-2S-X-3H-P-P-4D-X-P-P-P (9.3) ',\n",
+       " 'J.J8x.A98xxx.Txx T8x.AKxxxx.T.QJx Kx.QT9x.QJxx.AK9 AQ9xxxx..Kx.8xxx 0.38197 \\n 1H-1N-2S-3D-3H-P-4S-P-P-P (10.0)  \\n 1H-1N-2S-P-3D-P-4S-P-P-P (10.0)  \\n 1H-1N-2S-4D-P-4H-X-P-P-P (6.1)  \\n 1H-1N-2S-X-P-P-P (10.0) ',\n",
+       " 'J.J8x.A98xxx.Txx 98.AKTxxx.Tx.QJx AKx.Q9x.KQJx.xxx QTxxxxx.x.x.AK98 0.35863 \\n 1H-1N-2S-3D-3H-P-4S-P-P-P (10.0)  \\n 1H-1N-2S-P-3H-P-4S-P-P-P (10.0)  \\n 1H-1N-2S-4D-P-P-P (7.7)  \\n 1H-1N-2S-X-3H-P-4S-P-P-P (10.0) ',\n",
+       " 'J.J8x.A98xxx.Txx A.KQTxxx.Jx.J9xx KT8x.A9x.KQx.A8x Q9xxxxx.x.Tx.KQx 0.35815 \\n 1H-1N-2S-3D-P-P-3S-4D-P-P-P (9.1)  \\n 1H-1N-2S-P-3H-P-P-4D-P-P-P (9.1)  \\n 1H-1N-2S-4D-P-4H-X-P-P-P (5.9)  \\n 1H-1N-2S-X-3H-P-P-4D-P-P-P (9.1) ',\n",
+       " 'J.J8x.A98xxx.Txx Qx.AKQTxxx.x.xxx A9x.9x.KQJx.KQ8x KT8xxxx.x.Tx.AJ9 0.35181 \\n 1H-1N-2S-3D-4H-P-P-P (9.7)  \\n 1H-1N-2S-P-4H-P-P-P (9.7)  \\n 1H-1N-2S-4D-4H-P-P-P (9.7)  \\n 1H-1N-2S-X-4H-P-P-P (9.7) ',\n",
+       " 'J.J8x.A98xxx.Txx Tx.AQxxxx.Tx.Axx A8xx.K9.KJxx.KJx KQ9xxx.Tx.Q.Q98x 0.32955 \\n 1H-1N-2S-3D-3H-P-P-4D-P-P-P (10.0)  \\n 1H-1N-2S-P-3H-P-P-4D-X-P-P-P (10.0)  \\n 1H-1N-2S-4D-P-P-P (10.0)  \\n 1H-1N-2S-X-3H-P-P-4D-P-P-P (10.0) ',\n",
+       " 'J.J8x.A98xxx.Txx Ax.QT9xxx.Jx.AJx T8x.AKx.KQTx.K8x KQ9xxxx.x.x.Q9xx 0.32343 \\n 1H-1N-2S-3D-3H-P-4S-P-P-P (9.9)  \\n 1H-1N-2S-P-3H-P-4S-P-P-P (9.9)  \\n 1H-1N-2S-4D-P-4H-X-P-P-P (5.8)  \\n 1H-1N-2S-X-3H-P-4S-P-P-P (9.9) ',\n",
+       " 'J.J8x.A98xxx.Txx Qx.AQT9xx.x.QJ9x KTx.xx.KQxx.AKxx A98xxxx.Kx.JT.8x 0.31673 \\n 1H-1N-2S-3D-3H-P-P-4D-P-P-P (9.3)  \\n 1H-1N-2S-P-4H-P-P-P (9.4)  \\n 1H-1N-2S-4D-4H-P-P-P (9.4)  \\n 1H-1N-2S-X-3H-P-P-4D-X-P-P-P (9.3) ',\n",
+       " 'J.J8x.A98xxx.Txx Q8x.Qxxxx.Qx.KQJ Kx.AT9.KJTxx.A98 AT9xxxx.Kx..xxxx 0.30422 \\n 1H-1N-2S-3D-P-P-3S-4D-P-P-P (9.6)  \\n 1H-1N-2S-P-P-3D-3S-4D-P-P-P (9.5)  \\n 1H-1N-2S-4D-P-P-P (9.6)  \\n 1H-1N-2S-X-P-P-P (9.9) ',\n",
+       " 'J.J8x.A98xxx.Txx xx.K9xxxx.T.AKJ8 KQ8.ATx.KQxx.Q9x AT9xxxx.Q.Jx.xxx 0.29089 \\n 1H-1N-2S-3D-3H-P-P-4D-P-P-P (8.5)  \\n 1H-1N-2S-P-3H-P-P-4D-P-P-P (8.5)  \\n 1H-1N-2S-4D-4H-P-P-P (8.0)  \\n 1H-1N-2S-X-3H-P-P-4D-P-P-P (8.5) ',\n",
+       " 'J.J8x.A98xxx.Txx Txx.KQT9xx.T.KQJ Kx.Axxx.KJxx.A8x AQ98xxx..Qx.9xxx 0.26388 \\n 1H-1N-2S-3D-3H-P-4S-P-P-P (10.1)  \\n 1H-1N-2S-P-3D-P-4S-P-P-P (10.1)  \\n 1H-1N-2S-4D-4H-P-P-P (7.5)  \\n 1H-1N-2S-X-P-P-P (10.1) ',\n",
+       " 'J.J8x.A98xxx.Txx T9.KQT9xx.x.AJ98 Axx.Ax.KTxx.KQxx KQ8xxxx.xx.QJ.xx 0.26233 \\n 1H-1N-2S-3D-3H-P-P-4D-P-P-P (10.7)  \\n 1H-1N-2S-P-4H-P-P-P (7.6)  \\n 1H-1N-2S-4D-P-P-P (10.7)  \\n 1H-1N-2S-X-4H-P-P-P (7.6) ',\n",
+       " 'J.J8x.A98xxx.Txx x.AKxxx.Txx.AJ9x AQTx.T9x.KQJx.Kx K98xxxx.Qx..Q8xx 0.25313 \\n 1H-1N-2S-3D-P-P-3S-4D-P-P-P (8.5)  \\n 1H-1N-2S-P-P-P (9.0)  \\n 1H-1N-2S-4D-P-P-P (8.5)  \\n 1H-1N-2S-X-P-3D-P-P-P (8.6) ']"
       ]
      },
      "execution_count": 4,
@@ -156,11 +164,11 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': '5D', 'insta_score': 0.1046, 'expected_score': 46, 'adjustment': 5},\n",
-       " {'call': 'PASS',\n",
-       "  'insta_score': 0.863,\n",
-       "  'expected_score': -244,\n",
-       "  'adjustment': 43}]"
+       "[{'call': 'PASS',\n",
+       "  'insta_score': 0.554,\n",
+       "  'expected_score': -249,\n",
+       "  'adjustment': 28},\n",
+       " {'call': 'X', 'insta_score': 0.404, 'expected_score': -333, 'adjustment': 20}]"
       ]
      },
      "execution_count": 5,
@@ -208,11 +216,16 @@
     {
      "data": {
       "text/plain": [
-       "['KQ8xxxx..QT.9xxx J.J8x.A98xxx.Txx AT9x.9xxxxx.x.AQ x.AKQT.KJxx.KJ8x 0.25982 1H-1N-2S-3D-3S-P-4S-P-P-P (10.5)  1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (10.8) ',\n",
-       " 'AQTxxxx.x.T.98xx J.J8x.A98xxx.Txx K8x.AK9xx.xx.Qxx 9x.QTxx.KQJx.AKJ 0.25405 1H-1N-2S-3D-3S-P-4S-P-P-P (9.7)  1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (10.1) ',\n",
-       " 'AQT8xxx.x.x.8xxx J.J8x.A98xxx.Txx K9x.KTxxx.KTx.Qx xx.AQ9x.QJx.AKJ9 0.24568 1H-1N-2S-3D-3S-P-4S-P-P-P (8.6)  1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (9.9) ',\n",
-       " 'AQ8xxxx.T.J.98xx J.J8x.A98xxx.Txx Txx.AK9xxx.Qx.Kx K9.Qxx.KTxx.AQJx 0.22895 1H-1N-2S-3D-3S-P-4S-P-P-P (9.5)  1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (9.5) ',\n",
-       " 'AQTxxxxx.x.x.Jxx J.J8x.A98xxx.Txx 98x.AQ9xx.x.KQxx K.KTxx.KQJTx.A98 0.17219 1H-1N-2S-3D-3S-P-4S-P-P-P (11.0)  1H-1N-2S-3D-3S-P-4S-5D-X-P-P-P (9.8) ']"
+       "['QT9xxxx..KT.Q8xx J.J8x.A98xxx.Txx Axx.ATxxx.xx.KJx K8.KQ9xx.QJx.A9x 0.30275 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (10.2)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (10.2) ',\n",
+       " 'AQ9xxx.x.Q.J8xxx J.J8x.A98xxx.Txx Txx.KQ9xx.x.KQ9x K8x.ATxx.KJTxx.A 0.25517 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (9.2)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (9.2) ',\n",
+       " 'AT9xxx.x.KJTx.8x J.J8x.A98xxx.Txx K8xx.KT9xx.x.Axx Qx.AQxx.Qx.KQJ9x 0.24481 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (9.9)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (9.9) ',\n",
+       " 'AT9xxx.x.x.AJ9xx J.J8x.A98xxx.Txx KQ8x.KQTxxx.x.8x xx.A9x.KQJTx.KQx 0.24111 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (11.4)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (11.4) ',\n",
+       " 'KTxxxx.x.KQxx.xx J.J8x.A98xxx.Txx Qxx.KQTxx.x.KJxx A98.A9xx.JT.AQ98 0.23162 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (7.7)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (7.7) ',\n",
+       " 'AKT8xxx.x.xxx.xx J.J8x.A98xxx.Txx xxx.Q9xxxx..AKQ9 Q9.AKT.KQJT.J8xx 0.21738 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (10.6)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (10.6) ',\n",
+       " 'Qxxxxx.A.Qx.J8xx J.J8x.A98xxx.Txx KTx.QTxxx.x.KQ9x A98.K9xx.KJTx.Ax 0.20631 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (9.4)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (9.4) ',\n",
+       " 'QT8xxxx..T.KQxxx J.J8x.A98xxx.Txx Kxx.KTxxxx.J.AJx A9.AQ9x.KQxxx.98 0.19191 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (11.0)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (11.0) ',\n",
+       " 'KT8xxx.9x.Tx.AJx J.J8x.A98xxx.Txx AQx.KTxxxx.Jx.9x 9xx.AQ.KQx.KQ8xx 0.18954 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (8.6)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (8.6) ',\n",
+       " 'Q98xxxxx..QT.K8x J.J8x.A98xxx.Txx AKx.Txxxxx.Kx.9x T.AKQ9.Jxx.AQJxx 0.18436 \\n 1H-1N-2S-3D-3S-P-4S-P-P-P (10.6)  \\n 1H-1N-2S-3D-3S-P-4S-X-P-P-P (10.6) ']"
       ]
      },
      "execution_count": 6,
@@ -244,11 +257,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "J.J8x.A98xxx.Txx x.xxxx.QJxx.Q8xx AKTxxxx.AKQT..AK Q98x.9x.KTx.J9xx\n",
-      "J.J8x.A98xxx.Txx 9x.KTx.QJxxx.Q8x AKQTxxxx.AQ.K.AK 8x.9xxxx.T.J9xxx\n",
-      "J.J8x.A98xxx.Txx x.xxxx.Kxx.98xxx AKQ9xxxx.AQ.Q.AK T8x.KT9x.JTx.QJx\n",
-      "J.J8x.A98xxx.Txx xx.Txxx.KJTx.Q9x AKQ98xx.AQ9x..AK Txx.Kx.Qxx.J8xxx\n",
-      "J.J8x.A98xxx.Txx xx.Txx.QTxx.Q9xx AKQT98xx.AKQ..A8 xx.9xxx.KJx.KJxx\n"
+      "J.J8x.A98xxx.Txx Q8xx.xxx.KQ.A8xx AKT9xx.AKQx.JT.K xx.T9x.xxx.QJ9xx\n",
+      "J.J8x.A98xxx.Txx x.9x.JTx.AJ98xxx AKQTxx.AKxx.xx.K 98xxx.QTxx.KQ.Qx\n",
+      "J.J8x.A98xxx.Txx 8xxx.9.Txx.AJ9xx AQT9xx.AKTx.KJ.Q Kx.Qxxxx.Qx.K8xx\n",
+      "J.J8x.A98xxx.Txx 98x.T9x.JTx.AQxx AKQTxxx.AKQx.x.J xx.xxx.KQx.K98xx\n",
+      "J.J8x.A98xxx.Txx 8xx.Q9x.QJx.J8xx AKQxxxx.AKTx.K.x T9.xxx.Txx.AKQ9x\n",
+      "J.J8x.A98xxx.Txx QTx.T9xxx.xx.KQJ AK98xx.AKQx.K.xx xxx.x.QJTx.A98xx\n",
+      "J.J8x.A98xxx.Txx T.QTxx.Txx.KQ8xx AQxxxxx.AK9x.K.A K98x.xx.QJx.J9xx\n",
+      "J.J8x.A98xxx.Txx KTxx.Qxx.JTxx.9x AQ98xx.AK9x..AKx xx.Txx.KQx.QJ8xx\n",
+      "J.J8x.A98xxx.Txx 9xx.Txx.KJxx.AKx AKQ8xx.AKQx..Q98 Txx.9xx.QTx.Jxxx\n",
+      "J.J8x.A98xxx.Txx K9xx.T9x.Qx.Jxxx AQTxxxx.AKxx.K.K 8.Qxx.JTxx.AQ98x\n"
      ]
     }
    ],
