--- a/UCBC 2024/Simulations/OpeningLead3S.ipynb
+++ b/UCBC 2024/Simulations/OpeningLead3S.ipynb
@@ -52,11 +52,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW2-bidding-3233000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW2-binfo-808000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-3961000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-1887000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-1562000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/dummy-920000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty-1000000\n",
@@ -129,13 +130,13 @@
      "data": {
       "text/plain": [
        "[{'card': 'DJ',\n",
-       "  'insta_score': 0.7901,\n",
-       "  'expected_tricks_sd': 7.361,\n",
-       "  'p_make_contract': 0.16},\n",
+       "  'insta_score': 0.801,\n",
+       "  'expected_tricks_sd': 8.05,\n",
+       "  'p_make_contract': 0.36},\n",
        " {'card': 'HA',\n",
-       "  'insta_score': 0.1888,\n",
-       "  'expected_tricks_sd': 7.402,\n",
-       "  'p_make_contract': 0.18}]"
+       "  'insta_score': 0.181,\n",
+       "  'expected_tricks_sd': 8.11,\n",
+       "  'p_make_contract': 0.38}]"
       ]
      },
      "execution_count": 5,
@@ -169,17 +170,16 @@
     {
      "data": {
       "text/plain": [
-       "['9.Jxxx.Kxxx.AT9x .9x.A98xxx.QJ8xx KJxxxxxx.Qx.Q.Kx 0.34686',\n",
-       " 'J.J9xx.8xx.KJTxx .xxx.KQ9xxx.A9xx K9xxxxxx.Q.Ax.Q8 0.34595',\n",
-       " '.QJ9x.Axxx.Txxxx 9.xxx.K98xxx.AJ8 KJxxxxxx.x.Q.KQ9 0.33880',\n",
-       " '.Jxxx.xxx.AJTxxx x.9x.AQ98xx.K98x KJ9xxxxx.Qx.Kx.Q 0.32764',\n",
-       " 'J.xxx.K98.QJT9xx .J9x.Axxxxx.K8xx K9xxxxxx.Qx.Qx.A 0.32578',\n",
-       " '.J9xx.Q8xx.AJ9xx x.xx.A9xxxx.KTxx KJ9xxxxx.Qx.K.Q8 0.29849',\n",
-       " 'x.J9x.Axxx.JT8xx .xxx.Q98xxx.AK9x KJ9xxxxx.Qx.K.Qx 0.29458',\n",
-       " '.9xxx.8xx.AQ9xxx 9.Jxx.KQ9xxx.KTx KJxxxxxx.Q.Ax.J8 0.28673',\n",
-       " '.9xxxx.xxx.KQJxx K.Jx.KQ98xx.T98x J9xxxxxx.Q.Ax.Ax 0.27104',\n",
-       " 'x.Jxx.9xxx.AQ8xx .9xx.KQ8xxx.KTxx KJ9xxxxx.Qx.A.J9 0.25468',\n",
-       " '.Qxxxx.K9x.Q8xxx x.Jx.A8xxxx.KT9x KJ9xxxxx.9.Qx.AJ 0.25207']"
+       "['x.Qxxxx.Kxx.Q8xx .Jx.A98xxx.KT9xx KJ9xxxxx.9.Qx.AJ 0.18091',\n",
+       " 'x.Qxx.Axxx.QJ9xx .Jxx.Q98xxx.KT8x KJ9xxxxx.9x.K.Ax 0.17402',\n",
+       " '.Jxxx.K98x.JT8xx K.9x.Axxxxx.Q9xx J9xxxxxx.Qx.Q.AK 0.16004',\n",
+       " 'x.Qxxx.Axx.QJTxx .Jxx.Q98xxxx.K8x KJ9xxxxx.9.K.A9x 0.15511',\n",
+       " 'x.Qxxx.xxx.KQJT9 .9xx.K98xxx.Axxx KJ9xxxxx.J.AQ.8x 0.15314',\n",
+       " 'x.Q9xxx.xxx.K9xx .Jx.AQ9xxx.QJ8xx KJ9xxxxx.x.K8.AT 0.14290',\n",
+       " 'x.QJ9xxx.9xx.Q8x .xx.AQ8xxx.KJT9x KJ9xxxxx..Kx.Axx 0.13079',\n",
+       " '.9xxx.9x.AQJ98xx x.Jxx.K8xxxx.KTx KJ9xxxxx.Q.AQx.x 0.12351',\n",
+       " 'x.Qxx.Qxx.AT98xx .Jxx.K98xxx.QJxx KJ9xxxxx.9x.Ax.K 0.12341',\n",
+       " '9.9xxx.8xx.KQT8x .xx.AKQxxxx.Jxxx KJxxxxxx.QJ.9.A9 0.11148']"
       ]
      },
      "execution_count": 6,
