--- a/UCBC 2024/Simulations/OpeningLead6N.ipynb
+++ b/UCBC 2024/Simulations/OpeningLead6N.ipynb
@@ -52,11 +52,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW2-bidding-3233000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW2-binfo-808000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-3961000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-1887000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-1562000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/dummy-920000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty-1000000\n",
@@ -97,7 +97,7 @@
     {
      "data": {
       "text/plain": [
-       "C5"
+       "SQ"
       ]
      },
      "execution_count": 4,
@@ -128,14 +128,10 @@
     {
      "data": {
       "text/plain": [
-       "[{'card': 'Cx',\n",
-       "  'insta_score': 0.3347,\n",
-       "  'expected_tricks_sd': 11.506,\n",
-       "  'p_make_contract': 0.554},\n",
-       " {'card': 'SQ',\n",
-       "  'insta_score': 0.6514,\n",
-       "  'expected_tricks_sd': 11.516,\n",
-       "  'p_make_contract': 0.562}]"
+       "[{'card': 'SQ',\n",
+       "  'insta_score': 0.983,\n",
+       "  'expected_tricks_sd': 10.76,\n",
+       "  'p_make_contract': 0.35}]"
       ]
      },
      "execution_count": 5,
@@ -169,125 +165,115 @@
     {
      "data": {
       "text/plain": [
-       "['A8xx.AQx.xx.J8xx 9x.JTxxx.JT98.9x Kx.K9x.AKQxx.KQx 0.49426',\n",
-       " '9xxx.KJxx.Ax.QJx x.QTxxx.98xx.8xx AK8.A9.KQJTx.K9x 0.46943',\n",
-       " '98xx.Qxx.AQ8x.K8 x.T9xxx.J9xx.xxx AKx.AKJ.KTx.QJ9x 0.46376',\n",
-       " '9xxx.QJTx.Ax.KJ8 x.9xxxx.98xx.Q9x AK8.AK.KQJTx.xxx 0.46321',\n",
-       " 'K8xx.Kxx.QJTx.Qx 9x.Q9xxx.98x.98x Ax.AJT.AKxx.KJxx 0.46267',\n",
-       " 'AKxx.Q9x.8x.Q98x 98.Txxxx.JT9xx.x xx.AKJ.AKQx.KJxx 0.46113',\n",
-       " 'A8xx.AJxx.9x.QJx xx.T9xx.JT8x.8xx K9.KQx.AKQxx.K9x 0.45727',\n",
-       " 'Axxx.Qxx.Qxx.K9x 8.JT9xx.T8x.J8xx K9x.AKx.AKJ9x.Qx 0.44683',\n",
-       " 'A9xx.KQ9.Qxxxx.8 8x.Txxxx.T9.Jxxx Kx.AJx.AKJ8.KQ9x 0.44542',\n",
-       " 'A9.QJxx.Kx.J98xx 8xx.T9xxx.QT98x. Kxx.AK.AJxx.KQxx 0.44289',\n",
-       " 'K98x.KT.K98.Q98x xx.J9xxxx.JTxx.x Ax.AQx.AQxx.KJxx 0.43999',\n",
-       " 'K8xx.AQx.QTx.8xx 9x.JT9xxx.98x.Jx Ax.Kx.AKJxx.KQ9x 0.43657',\n",
-       " 'Axx.KTxx.KJx.Jxx 98.J9xxx.98x.98x Kxx.AQ.AQTxx.KQx 0.42913',\n",
-       " '98xx.Kxx.AQx.Q9x x.JT9xx.JT9x.xxx AKx.AQx.K8xx.KJ8 0.42810',\n",
-       " 'Kxxx.K9x.J9xx.KJ 8x.JTxxx.8x.9xxx A9.AQx.AKQTx.Q8x 0.42775',\n",
-       " '9xxx.Axx.KQx.Qxx 8x.T9xxx.J9xx.Jx AK.KQJ.AT8x.K98x 0.42427',\n",
-       " 'K9x.QJxx.A9xx.Qx 8xx.T9xx.8xx.8xx Ax.AKx.KQJT.KJ9x 0.42369',\n",
-       " '9xx.KJ9x.A9xx.Kx 8x.Txxxx.QTx.8xx AKx.AQ.KJ8x.QJ9x 0.42344',\n",
-       " 'K98.KT9x.KJxx.Q9 xx.Jxxxx.T8.8xxx Axx.AQ.AQ9xx.KJx 0.42334',\n",
-       " 'AK98.Qxx.QT9x.8x xx.T9xxx.J8xx.xx xx.AKJ.AKx.KQJ9x 0.42214',\n",
-       " 'K9xx.ATx.KJ9.xxx 8x.9xxxx.Txxx.Q9 Ax.KQJ.AQ8x.KJ8x 0.41601',\n",
-       " 'K9.KJxx.K9.J8xxx xxx.T9xx.QT8x.9x A8x.AQx.AJxxx.KQ 0.40607',\n",
-       " '9xx.AQ9x.KJ.J8xx 8x.Txxx.Txxxx.Qx AKx.KJx.AQ98.K9x 0.40380',\n",
-       " 'xxx.AQTx.AJx.9xx 9x.J9xxx.T9x.J8x AK8.Kx.KQ8xx.KQx 0.40282',\n",
-       " 'xxx.AJ9x.KQxx.Qx 98x.Txxx.T8x.9xx AK.KQx.AJ9x.KJ8x 0.40154',\n",
-       " '9xx.AQJx.QJxx.Qx xx.T9xxx.98x.Jxx AK8.Kx.AKTx.K98x 0.40055',\n",
-       " 'AK9x.9xx.98x.KJx xx.QTxxx.Txx.9xx 8x.AKJ.AKQJx.Q8x 0.39869',\n",
-       " 'A8xx.K9xx.Ax.98x 9x.QTxx.T98xx.xx Kx.AJx.KQJx.KQJx 0.39848',\n",
-       " 'Kxxx.AJT.Txx.QJx 8x.9xxxx.Q8x.8xx A9.KQx.AKJ9x.K9x 0.39834',\n",
-       " 'A8x.AJxx.JT9x.Q8 xx.9xxx.8xx.Jxxx K9x.KQT.AKQx.K9x 0.39653',\n",
-       " 'K9xx.QT.KQJ8x.9x 8.Jxxxxx.9xx.J8x Axx.AK9.ATx.KQxx 0.39418',\n",
-       " 'A8xx.AKTx.Tx.8xx 9x.Jxxx.J9xx.9xx Kx.Q9x.AKQ8x.KQJ 0.39352',\n",
-       " 'A9xx.AKT.9x.J9xx x.xxxxx.JT8xx.xx K8x.QJ9.AKQx.KQ8 0.38991',\n",
-       " 'A8xx.Axx.Q8x.Jxx x.T9xxx.JTxx.9xx K9x.KQJ.AK9x.KQ8 0.38979',\n",
-       " 'xx.AQJx.98xx.KQ9 98xx.T9xx.Jxx.8x AK.Kxx.AKQT.Jxxx 0.38893',\n",
-       " 'Axx.QT9x.AJ.9xxx 9x.Jxxx.8xxxx.J8 K8x.AKx.KQT9.KQx 0.38835',\n",
-       " 'K9x.AQxx.Q8xx.xx 8x.JTxx.T9xx.Jxx Axx.K9x.AKJ.KQ98 0.38829',\n",
-       " 'A9.AJ9x.K9xx.9xx 8xx.Txxx.JT8x.8x Kxx.KQx.AQx.KQJx 0.38668',\n",
-       " 'Kxx.QJxx.K9xx.Qx 9x.T9xx.8xx.J9xx A8x.AKx.AQJT.K8x 0.38664',\n",
-       " '8xx.QTxx.AQT9.K9 9x.J9xxx.8x.8xxx AKx.AK.KJxxx.QJx 0.38500',\n",
-       " 'K98x.Kxx.T9x.KQ8 xx.T9xxx.Jxx.9xx Ax.AQJ.AKQ8x.Jxx 0.38321',\n",
-       " '98x.KQTx.KTx.QJx xx.J9xx.J9xx.8xx AKx.Axx.AQ8x.K9x 0.38232',\n",
-       " '8xxx.AKx.KJ9x.98 9.JT9xx.Tx.Jxxxx AKx.Qxx.AQ8xx.KQ 0.38032',\n",
-       " 'Kxx.KQ9x.KTx.98x 98x.Jxxx.Jxxx.xx Ax.ATx.AQ98.KQJx 0.37952',\n",
-       " 'K9xx.Kxx.KJxx.Jx 8.Q9xxx.98xx.98x Axx.AJT.AQT.KQxx 0.37950',\n",
-       " 'xxx.AKT9.QJx.Q9x 9x.xxxx.xxx.Jxxx AK8.QJx.AKT98.K8 0.37594',\n",
-       " '98xx.AQ.KQ9x.98x x.J9xxxxx.T8x.xx AKx.KT.AJxx.KQJx 0.37561',\n",
-       " '98xx.KQx.KQJ.98x x.Txxxx.T98x.Jxx AKx.AJ9.Axxx.KQx 0.37414',\n",
-       " 'Axxx.AJTx.Tx.Qxx 9.Qxxx.98xx.98xx K8x.K9x.AKQJx.KJ 0.37262',\n",
-       " 'AKxx.QJxx.xxx.Qx 8x.T9xxx.J8x.9xx 9x.AK.AKQT9.KJ8x 0.37071',\n",
-       " '9xx.AQ9x.A9xx.Jx 8x.Txxx.J8xx.8xx AKx.KJx.KQT.KQ9x 0.37022',\n",
-       " 'Kx.Qxxx.AJ9x.Q9x 9xx.JT9xx.Tx.8xx A8x.AK.KQ8xx.KJx 0.36964',\n",
-       " 'A9x.KQTx.9xx.Qxx 8x.Jxxxx.8xx.8xx Kxx.A9.AKQJT.KJ9 0.36914',\n",
-       " '8xxx.AKJ.K98x.98 x.Txxxx.xx.Qxxxx AK9.Q9x.AQJTx.KJ 0.36879',\n",
-       " '9xxx.KQ9x.KJx.Qx 8x.JTxxx.T9xx.J8 AK.Ax.AQ8x.K9xxx 0.36641',\n",
-       " 'A8x.K9xx.KTx.Jxx xx.JTxx.J8xxx.9x K9x.AQx.AQ9.KQ8x 0.36601',\n",
-       " 'AKxx.QTxx.Q8.xxx 9x.J9xx.T9xx.J98 8x.AKx.AKJxx.KQx 0.36504',\n",
-       " 'AK8x.Q9x.JT9x.Qx xx.JTxxxx.xx.xxx 9x.AK.AKQ8x.KJ98 0.36433',\n",
-       " '98xx.AKxx.ATx.9x xx.J9xx.8xx.J8xx AK.QTx.KQJ9x.KQx 0.36404',\n",
-       " '9x.K9xx.AK8xx.Jx xxx.Txxx.Jx.98xx AK8.AQJ.QT9x.KQx 0.36376',\n",
-       " 'Ax.KTxx.T9x.KQ8x 9xx.9xxx.J8x.9xx K8x.AQJ.AKQxx.Jx 0.36302',\n",
-       " 'Axxx.QJTx.J9.Kxx 9x.9xxx.QT8xx.8x K8.AKx.AKxx.QJ9x 0.36206',\n",
-       " 'AKx.QTxx.QTx.xxx 8x.9xxx.J8xx.J9x 9xx.AKJ.AK9x.KQ8 0.36164',\n",
-       " 'Kxx.KJ9x.Qxx.QJx 9x.Txxx.T98.98xx A8x.AQx.AKJxx.Kx 0.36040',\n",
-       " 'xx.A9xx.AT9.QJ9x 98x.Qxxx.8xxx.xx AKx.KJT.KQJx.K8x 0.36022',\n",
-       " 'A9x.AQxx.Q9xx.xx 8xx.T9xxx.J8x.9x Kx.KJ.AKTx.KQJ8x 0.35980',\n",
-       " 'Kxx.AJxx.8xxx.K8 9xx.T9xx.Tx.J9xx A8.KQx.AKQJ9.Qxx 0.35774',\n",
-       " 'AK8x.K9x.JT9x.9x 9x.QTxxx.8xx.8xx xx.AJx.AKQx.KQJx 0.35635',\n",
-       " 'Kx.KTxx.QTxx.Kxx 98x.Q9xx.98xx.8x Axx.AJx.AKJ.QJ9x 0.35260',\n",
-       " '9x.KQTx.QT9x.KJ9 8xx.9xxx.8xx.Q8x AKx.AJx.AKJx.xxx 0.35108',\n",
-       " 'K8x.QT9x.KQx.J9x 9x.xxxx.98x.Q8xx Axx.AKJ.AJTxx.Kx 0.35089',\n",
-       " 'AKxx.Jxx.QJTxx.8 8.QT9xx.98.9xxxx 9xx.AKx.AKxx.KQJ 0.35023',\n",
-       " 'K9x.QJT9.Q9xx.Kx 8x.xxxx.J8xx.J9x Axx.AKx.AKT.Q8xx 0.34992',\n",
-       " 'K9xx.Qx.KQTx.J9x xx.JT9xxx.J8x.xx A8.AKx.A9xx.KQ8x 0.34872',\n",
-       " '98xx.QJ.QJ8xx.KQ x.T9xxxx.Txx.J8x AKx.AKx.AK9.9xxx 0.34548',\n",
-       " 'A8x.Jxxx.AJx.Q9x xx.T9xx.98xx.8xx K9x.AKQ.KQTx.KJx 0.34392',\n",
-       " 'Axx.Q9xx.QJx.Q8x 9x.JTxx.T8xx.Jxx K8x.AKx.AK9x.K9x 0.34144',\n",
-       " '8xxx.AJxx.KT.Kxx 9x.QTxx.98xx.98x AK.K9x.AQJxx.QJx 0.34134',\n",
-       " 'AK98.KQ9x.9xx.9x xx.Txxx.J8x.8xxx xx.AJx.AKQTx.KQJ 0.33580',\n",
-       " '8xx.AJxx.Q9x.KQx xx.Txxx.T8xx.J8x AK9.KQ9.AKJx.9xx 0.33556',\n",
-       " 'A8xx.KJx.K9x.Jxx 9.T9xxx.JT8xx.9x Kxx.AQx.AQx.KQ8x 0.33511',\n",
-       " 'K98.QJxx.KJx.Q8x xxx.9xxx.T98x.9x Ax.AKT.AQxx.KJxx 0.33364',\n",
-       " 'Axx.KJ9x.J8x.Kxx 9xx.Txxxx.Txx.Jx K8.AQ.AKQ9x.Q98x 0.33255',\n",
-       " 'K8x.ATxx.KJ9x.9x 9x.J9xx.8xx.Jxxx Axx.KQx.AQTx.KQ8 0.33095',\n",
-       " 'K98x.AQxx.Q8x.xx x.Jxxx.JTxx.98xx Axx.KT9.AK9x.KQJ 0.32724',\n",
-       " 'Kxxx.KQ9x.QJ.8xx 98.JTxx.T98xx.xx Ax.Axx.AKxx.KQJ9 0.32596',\n",
-       " 'K9x.AQxx.Jxx.Qxx 8xx.Txxx.T8xx.Jx Ax.KJ9.AKQ9.K98x 0.32490',\n",
-       " '98xx.KQT9.QJx.Kx xx.Jxxxx.8xx.8xx AK.Ax.AKT9x.QJ9x 0.32404',\n",
-       " '8xxx.AJxx.AJ.J9x 9.9xxx.T98x.Q8xx AKx.KQT.KQxxx.Kx 0.32307',\n",
-       " 'xxx.AQ9x.Q98.QJx 8x.Txxxx.JTx.98x AK9.KJ.AKxxx.Kxx 0.32268',\n",
-       " 'A9xx.J9x.K9x.QJ9 8.Txxxx.JTxx.xxx Kxx.AKQ.AQ8x.K8x 0.31813',\n",
-       " 'AKx.QJTx.8xxx.J8 98x.9xxxx.Tx.Qxx xx.AK.AKQJ9.K9xx 0.31568',\n",
-       " 'K9.JT9x.A9xx.KJx 8xxx.xxxx.Txx.xx Ax.AKQ.KQJ8.Q98x 0.31035',\n",
-       " 'K8.KJxx.KT98.Jxx 9xx.T9xxx.Qxx.98 Axx.AQ.AJxx.KQxx 0.30840',\n",
-       " 'Kx.K9xx.QJ98.Qxx 9xx.JTxx.xxx.8xx A8x.AQx.AKTx.KJ9 0.30821',\n",
-       " 'K9xx.KQxx.QTx.Jx 8x.Txxx.J98x.98x Ax.AJ9.AKxx.KQxx 0.30658',\n",
-       " '98xx.ATxx.KQ8.Qx xx.Jxxx.9xxxx.J8 AK.KQ9.AJT.K9xxx 0.30598',\n",
-       " 'A9xx.KJxx.Qxx.Jx 8x.Txxx.T8x.Q9xx Kx.AQ9.AKJ9x.K8x 0.30586',\n",
-       " 'K9x.A9xx.AT9xx.x 8xx.Txxx.J8x.J9x Ax.KQJ.KQx.KQ8xx 0.30507',\n",
-       " 'K8x.Q9xx.KQT9.Qx xx.JTxx.8xxx.98x A9x.AKx.AJx.KJxx 0.30324',\n",
-       " 'K9xx.AKTx.JT8x.x 8.9xxx.xx.Q98xxx Axx.QJx.AKQ9x.KJ 0.30247',\n",
-       " '8xx.Axxx.KJx.QJ9 9x.QTxx.Txxx.8xx AKx.KJ9.AQ98.Kxx 0.30110',\n",
-       " 'A9x.KT9x.K98x.Jx 8x.Jxxx.JTxx.98x Kxx.AQx.AQx.KQxx 0.29984',\n",
-       " 'Axx.QJxx.KQxx.98 8x.T9xxx.Tx.Jxxx K9x.AK.AJ98x.KQx 0.29820',\n",
-       " 'K9x.AKxx.JTx.8xx 8xx.J9xx.98xx.9x Ax.QTx.AKQx.KQJx 0.29210',\n",
-       " '8xxx.AJT9.AJx.J8 x.Qxxxx.T98xx.9x AK9.Kx.KQx.KQxxx 0.28955',\n",
-       " '98xx.AKJT.T9x.Kx x.9xxxx.J8x.98xx AKx.Qx.AKQxx.QJx 0.28142',\n",
-       " 'K.Kxxx.KJ98x.Jxx xxx.QTx.xx.8x A8.AJx.AQTx.KQ9x 0.27337',\n",
-       " 'Kxx.Q9xx.J9x.KQ9 9x.JTxx.Txx.Jxxx A8x.AKx.AKQ8x.8x 0.26991',\n",
-       " '8xx.AT9x.A98.KJ8 xx.Jxxx.Txxxx.9x AK9.KQx.KQJ.Qxxx 0.26763',\n",
-       " 'K9x.KQTx.A8xx.9x xxx.9xxxx.Jxx.8x A8.AJ.KQT9.KQJxx 0.26613',\n",
-       " 'K8xx.KJxx.JTx.Kx 9x.Q9xx.98xx.9xx Ax.ATx.AKQx.QJ8x 0.26000',\n",
-       " 'K8xx.KQJx.Q9x.Jx 9x.Txxx.T8xx.9xx Ax.A9x.AKJx.KQ8x 0.25716',\n",
-       " 'A9x.A9xx.T9x.QJx 8x.QTxx.8xx.98xx Kxx.KJx.AKQJx.Kx 0.25665',\n",
-       " 'K8xx.A9x.KT8.Q8x 9x.Txxxx.9xx.Jxx Ax.KQJ.AQJxx.K9x 0.25571',\n",
-       " 'K8xx.AJ9x.Q98.Jx x.QTxx.Txxx.98xx A9x.Kxx.AKJx.KQx 0.25412',\n",
-       " 'Kxxx.ATxx.K9x.Jx 8x.Qxxx.T8x.98xx A9.KJ9.AQJxx.KQx 0.25312',\n",
-       " '98xx.AJxx.KQx.Jx xx.T9xx.JTxx.8xx AK.KQx.A98x.KQ9x 0.25211',\n",
-       " '98x.AJxx.JTx.KQx xx.T9xx.9xx.J9xx AKx.KQx.AKQ8x.8x 0.25069']"
+       "['Ax.QT9x.9x.KQxxx 9xx.xxxx.QTxx.98 K8x.AKJ.AKJ8x.Jx 0.43298',\n",
+       " 'xxxx.AKQJ.xx.J8x 98.Txxx.T98xx.Qx AK.9xx.AKQJ.K9xx 0.38901',\n",
+       " 'A8x.Jxxx.AJx.Q9x xx.T9xx.98xx.8xx K9x.AKQ.KQTx.KJx 0.38193',\n",
+       " 'A9xx.KQ9x.9x.Q9x 8.JTxxx.J8xx.8xx Kxx.Ax.AKQTx.KJx 0.38072',\n",
+       " 'AKxx.Axxx.T9xx.x x.QT9x.8xx.98xxx 98x.KJx.AKQJ.KQJ 0.37923',\n",
+       " 'A8xx.K9xx.AT.98x 9x.QTxx.98xxx.xx Kx.AJx.KQJx.KQJx 0.37465',\n",
+       " '9xx.KJ9x.A9xx.Kx 8x.Txxxx.QTx.8xx AKx.AQ.KJ8x.QJ9x 0.37423',\n",
+       " 'A9xx.KJ9x.K.9xxx 8x.Txxxx.Txxxx.x Kx.AQ.AQJ98.KQJ8 0.37377',\n",
+       " '9x.K9xx.AK8xx.Jx xxx.Txxx.Jx.98xx AK8.AQJ.QT9x.KQx 0.37353',\n",
+       " '98xx.AKxx.ATx.9x xx.J9xx.8xx.J8xx AK.QTx.KQJ9x.KQx 0.37323',\n",
+       " 'Axx.J9xx.K9xx.Kx 8x.Txxx.Jxx.98xx K9x.AKQ.AQT8.QJx 0.37155',\n",
+       " 'A8xx.AJxx.T9.QJx 9x.9xxx.J8xx.8xx Kx.KQT.AKQxx.K9x 0.37088',\n",
+       " '9xxx.AKJx.K8x.xx 8x.9xxx.QT9xx.9x AK.QTx.AJx.KQJ8x 0.37067',\n",
+       " '9xx.AQ9x.A9xx.Jx 8x.Txxx.J8xx.8xx AKx.KJx.KQT.KQ9x 0.36813',\n",
+       " 'A8xx.Jxxx.AQxx.8 xx.T9xx.T98.J9xx K9.AKQ.KJxx.KQxx 0.36658',\n",
+       " 'Kxx.AJxx.8xxx.K8 9xx.T9xx.Tx.J9xx A8.KQx.AKQJ9.Qxx 0.36631',\n",
+       " '98x.KTxx.A9x.KQ8 xxx.J9xx.T8x.9xx AK.AQx.KQJxx.Jxx 0.36424',\n",
+       " '8x.Q9xx.AQ.KJ9xx xxx.Jxxx.T98x.8x AK9.AKT.KJxxx.Qx 0.36357',\n",
+       " '8x.AT9x.AT9.KJ8x xxx.Jxxx.xxxx.9x AK9.KQx.KQJ8.Qxx 0.36343',\n",
+       " 'A9xx.QT9x.K9x.Kx x.xxxx.JT8xx.8xx K8x.AKJ.AQx.QJ9x 0.36166',\n",
+       " 'K98x.QJ9x.Ax.Qxx xx.Txxx.T9xxx.Jx Ax.AKx.KQJ8.K98x 0.36157',\n",
+       " 'Axxx.AJTx.Tx.Qxx 9.Qxxx.98xx.98xx K8x.K9x.AKQJx.KJ 0.36138',\n",
+       " 'A8xx.AKxx.x.J98x 9x.T9xx.JT98xx.x Kx.QJx.AKQx.KQxx 0.36043',\n",
+       " 'Kxx.QJ9x.ATx.Q8x 8x.Txxx.98x.J9xx A9x.AKx.KQJxx.Kx 0.35856',\n",
+       " 'xx.KQxx.A98x.Q9x 8xx.T9xxx.xxx.xx AK9.AJ.KQJT.KJ8x 0.35843',\n",
+       " 'A98.AKxx.xxx.8xx xxx.JT9x.T98x.Jx Kx.Qxx.AKQJ.KQ9x 0.35674',\n",
+       " 'Ax.KTxx.9x.KQ8xx 9xx.9xxx.JT8x.9x K8x.AQJ.AKQxx.Jx 0.35584',\n",
+       " 'K8x.KQJT.J9x.Q9x xx.xxxx.Txxx.8xx A9x.A9x.AKQ8.KJx 0.35237',\n",
+       " 'K9x.AQxx.JTx.Qxx 8xx.Txxx.8xx.J9x Ax.KJ9.AKQ9x.K8x 0.35222',\n",
+       " '8x.KTxx.AQTxx.Qx 9xx.J9xxx.9x.8xx AKx.AQ.KJ8x.KJ9x 0.35184',\n",
+       " 'Kx.KTxx.QTxx.Kxx 98x.Q9xx.98xx.8x Axx.AJx.AKJ.QJ9x 0.35174',\n",
+       " 'A8x.Q9xx.Jx.KQ9x 9xx.Txxx.98xx.8x Kx.AKJ.AKQTx.Jxx 0.35117',\n",
+       " 'Kxx.KJTx.ATx.9xx 8x.Q9xxx.98xxx.8 A9x.Ax.KQJ.KQJxx 0.35067',\n",
+       " 'A8xx.QT9x.AJ.xxx 9x.Jxxx.8xxxx.J8 Kx.AKx.KQT9.KQ9x 0.34984',\n",
+       " '8x.QTxx.AQT9.K9x 9xx.J9xxx.8x.8xx AKx.AK.KJxxx.QJx 0.34816',\n",
+       " 'xx.AQJx.Qx.Q98xx 98xx.9xxx.98xx.x AK.KTx.AKJTx.KJx 0.34746',\n",
+       " 'Axx.QJT9.KJ8x.8x 8xx.xxxx.9xx.Qxx K9.AKx.AQTx.KJ9x 0.34553',\n",
+       " '9xxx.AQTx.Ax.Qxx 8x.xxxx.9xxx.J8x AK.KJ9.KQJT8.K9x 0.34513',\n",
+       " 'K9.T9xx.A9xx.KJx 8xxx.Jxxx.Txx.xx Ax.AKQ.KQJ8.Q98x 0.34472',\n",
+       " 'xx.AQJx.98xx.KQ9 98xx.T9xx.Jxx.8x AK.Kxx.AKQT.Jxxx 0.34457',\n",
+       " '8xxx.AJxx.KT.Kxx 9x.QTxx.98xx.98x AK.K9x.AQJxx.QJx 0.34351',\n",
+       " 'K8.KJxx.KT98.Jxx 9xxx.Txxx.Qxx.98 Ax.AQ9.AJxx.KQxx 0.34236',\n",
+       " 'K9x.AKxx.JTx.8xx 8xx.J9xx.98xx.9x Ax.QTx.AKQx.KQJx 0.34227',\n",
+       " 'K9xx.AKTx.JTx.8x 8.9xxx.9xx.Q9xxx Axx.QJx.AKQ8x.KJ 0.34197',\n",
+       " 'K8x.KQJx.Q9x.J9x 9xx.Txxx.T8xx.xx Ax.A9x.AKJx.KQ8x 0.34113',\n",
+       " 'K98x.AQxx.Q8xx.x x.JTxx.JTx.98xxx Axx.K9x.AK9x.KQJ 0.33822',\n",
+       " 'Kxx.KJ9x.Qxx.QJx 9x.Txxx.T98.98xx A8x.AQx.AKJxx.Kx 0.33798',\n",
+       " '9x.KJ9x.KJ.QJxxx 8xxx.QTxx.T8xx.9 AK.Axx.AQ9xx.K8x 0.33755',\n",
+       " 'K9x.KT9x.8x.KQxx xx.Jxxx.T9xx.J8x A8x.AQx.AKQJx.9x 0.33725',\n",
+       " 'Kx.Axxx.Q98x.Qxx 98x.JT9xx.Jx.9xx Axx.KQ.AKTxx.KJ8 0.33721',\n",
+       " 'x.Kxxx.A9xx.KJxx 8xxx.QT9x.T8x.8x AK9.AJx.KQJx.Q9x 0.33579',\n",
+       " 'xxx.KQ9x.AT9x.Qx 98.JTxxx.8xxx.Jx AKx.Ax.KQJ.K98xx 0.33499',\n",
+       " '8xx.AKJT.T9x.Kxx 9x.9xxxx.J8x.98x AKx.Qx.AKQxx.QJx 0.33204',\n",
+       " 'Kxx.AQJx.Jx.98xx 9xx.Txxx.T8xxx.J A8.K9x.AKQ9.KQxx 0.33197',\n",
+       " 'Kx.QJxx.JT8x.KQ8 98x.T9xxx.9xx.9x Axx.AK.AKQx.Jxxx 0.32997',\n",
+       " 'A9.QJxx.Kx.J98xx 8xxx.T9xxx.QT8x. Kx.AK.AJ9xx.KQxx 0.32849',\n",
+       " 'Kx.KJxx.QJT8.Q9x 8xx.Txxx.9x.Jxxx A9x.AQ9.AKxxx.K8 0.32595',\n",
+       " 'A9xx.KJ9x.QJ8x.x x.Txxxx.T9x.Q9xx K8x.AQ.AKxx.KJ8x 0.32520',\n",
+       " 'A9x.AJTx.Jxx.J98 xxx.xxxx.QT8xx.x K8.KQ9.AK9.KQxxx 0.32505',\n",
+       " '98.KQxx.JTxx.KQ9 xxx.T9xx.9xx.xxx AKx.AJx.AKQ8.J8x 0.32394',\n",
+       " 'Axxx.QJTx.J9.Kxx 9x.9xxx.QT8xx.8x K8.AKx.AKxx.QJ9x 0.32359',\n",
+       " 'xxx.K9xx.KQxx.K9 98.Txxx.JT9x.J8x AKx.AQJ.A8x.Qxxx 0.32218',\n",
+       " 'A8xx.KQTx.9xx.Q9 9x.xxxx.QT8.8xxx Kx.AJ9.AKJxx.KJx 0.32064',\n",
+       " '98x.AJxx.KQTx.Jx xxx.T9xx.Jxx.8xx AK.KQx.A98x.KQ9x 0.32001',\n",
+       " '9xx.AJTx.KQJ8.xx 8x.Qxxx.Txxx.8xx AKx.K9x.A9x.KQJ9 0.31936',\n",
+       " 'AK9.QT9x.Q8x.J8x xx.xxxx.JT9x.9xx 8xx.AKJ.AKxx.KQx 0.31909',\n",
+       " 'x.A9xx.KJT8.QJxx 98xx.Txxx.9xx.8x AKx.KQJ.AQxx.K9x 0.31898',\n",
+       " '9xx.QJxx.AKT9.Jx xx.T9xx.Qxxx.8xx AK8.AKx.J8x.KQ9x 0.31412',\n",
+       " 'xxx.Q9xx.AQ8x.K8 98.Jxxx.T9x.Jxxx AKx.AKT.KJxx.Q9x 0.30865',\n",
+       " '9xxx.QJTx.Ax.KJ8 x.9xxxx.98xx.Q9x AK8.AK.KQJTx.xxx 0.30697',\n",
+       " 'A9.AJ9x.K9xx.9xx 8xxx.Txxx.T8x.8x Kx.KQx.AQJx.KQJx 0.30593',\n",
+       " 'Kx.AQ9x.Q8xx.J9x 9xx.JTxx.T9xx.8x A8x.Kxx.AKJ.KQxx 0.30482',\n",
+       " 'A8xx.J9x.KJx.QJ9 9x.Txxxx.Txx.xxx Kx.AKQ.AQ98x.K8x 0.30400',\n",
+       " '8.AJxx.Txx.KQJxx 9xxx.9xxx.J9x.8x AKx.KQT.AKQ8x.9x 0.30285',\n",
+       " 'Kxx.AJ9x.QT8.J9x 8xx.QTxx.9xxx.8x A9.Kxx.AKJx.KQxx 0.29899',\n",
+       " 'K9xx.KQxx.QTx.Jx 8x.Txxx.J98x.98x Ax.AJ9.AKxx.KQxx 0.29832',\n",
+       " 'K98.KQxx.QJ8.J8x xxx.JTxx.Txx.9xx Ax.A9x.AK9xx.KQx 0.29696',\n",
+       " '9xx.KQJx.KJx.QJx xx.Txxxx.8xxx.xx AK8.A9.AQT9.K98x 0.29452',\n",
+       " '9xx.KJxx.A9x.K9x 8x.T9xx.J8xx.8xx AKx.AQx.KQTx.QJx 0.29416',\n",
+       " 'A9xx.AKT.9x.J9xx x.xxxxx.JT8xx.xx K8x.QJ9.AKQx.KQ8 0.29273',\n",
+       " 'Ax.AJxx.K98x.xxx 98x.T9xxx.Txx.8x Kxx.KQ.AQJx.KQJ9 0.28830',\n",
+       " '98x.AQxx.AQTx.9x xx.J9xxx.8xx.8xx AKx.KT.KJ9x.KQJx 0.28770',\n",
+       " 'AK.Kxxx.J98x.J9x 98xx.JT9x.Txx.xx xx.AQx.AKQx.KQ8x 0.28352',\n",
+       " 'A.AJ9x.9xxx.Kxxx 98xx.xxxx.8x.J8x Kxx.KQT.AKQJT.Q9 0.28313',\n",
+       " 'K8xx.Axx.KJ8.J9x 9x.JT9xx.9xxxx.x Ax.KQx.AQT.KQ8xx 0.28234',\n",
+       " 'xxx.Axxx.AQJ8x.J 98.JT9x.9xx.9xxx AKx.KQx.KTx.KQ8x 0.27420',\n",
+       " '8xxx.AKJ.K98x.98 x.QTxxxx.Txx.xxx AK9.9x.AQJx.KQJx 0.27296',\n",
+       " 'A9x.KQTx.9xx.Qxx 8x.Jxxxx.8xx.8xx Kxx.A9.AKQJT.KJ9 0.27226',\n",
+       " 'A8x.AQTx.QT9.J9x 9x.9xxx.xxx.8xxx Kxx.KJx.AKJ8x.KQ 0.26945',\n",
+       " 'xx.AKJ9.QT8xx.Qx 9xx.Txxxx.J9.9xx AK8.Qx.AKxx.KJ8x 0.26860',\n",
+       " 'Kxx.AJTx.Txx.QJx 8xx.9xxx.Q8x.8xx A9.KQx.AKJ9x.K9x 0.26846',\n",
+       " 'K8x.KQxx.xx.QJ9x xxx.T9xxx.Q98x.8 A9.AJ.AKJTx.Kxxx 0.26777',\n",
+       " 'K8xx.JT9.AKx.xxx xx.Qxxxx.T98x.9x A9.AKx.QJxx.KQJ8 0.26606',\n",
+       " '98x.KJxx.A9x.K8x xx.T9xx.Jxxx.9xx AKx.AQx.KQT8.QJx 0.26571',\n",
+       " 'xx.A9xx.AQT9x.Qx 98x.Jxxx.8xx.8xx AKx.KQT.KJx.KJ9x 0.26518',\n",
+       " 'xx.AJTx.Jxx.KQxx 9xx.9xxx.QT9.98x AK8.KQx.AK8xx.Jx 0.26497',\n",
+       " '9xx.KQ9x.KJ8x.QJ 8x.Jxxx.T9xx.98x AKx.ATx.AQx.Kxxx 0.26339',\n",
+       " 'Ax.QTxx.KJT8x.Qx 98x.J9xxx.9xx.9x Kxx.AK.AQx.KJ8xx 0.26253',\n",
+       " 'xxx.AQTx.AJx.9xx 9x.J9xxx.T9x.J8x AK8.Kx.KQ8xx.KQx 0.26139',\n",
+       " 'K9x.QJxx.A9xx.Qx 8xx.T9xx.8xx.8xx Ax.AKx.KQJT.KJ9x 0.25916',\n",
+       " '98.AK9x.KJ98.Qxx xxxx.Txxx.xxx.xx AK.QJx.AQTx.KJ98 0.25748',\n",
+       " 'Kx.KQ9x.QJx.J98x 8xxx.JTxxx.T9x.x A9.Ax.AK8xx.KQxx 0.25692',\n",
+       " 'K9xx.AJTx.Jx.KJx x.9xxx.T9xxx.98x A8x.KQx.AKQ8.Qxx 0.25650',\n",
+       " 'Ax.QJxx.AJ98x.xx 98x.T9xxx.xx.9xx Kxx.AK.KQTx.KQJ8 0.25553',\n",
+       " '98xx.Qxx.AQ8x.K8 x.T9xxx.J9xx.xxx AKx.AKJ.KTx.QJ9x 0.25420',\n",
+       " 'Axxx.Jx.QJ9x.K9x 8x.QT9xxx.8xx.8x K9.AKx.AKTx.QJxx 0.25167',\n",
+       " 'Kxx.QJxx.AKx.9xx 98.T9xx.T8xx.8xx Axx.AKx.QJ9x.KQJ 0.25073',\n",
+       " 'K9xx.Kxx.KJxx.Jx 8x.Q9xxx.98x.98x Ax.AJT.AQTx.KQxx 0.25059',\n",
+       " 'xx.AKQx.Qxx.98xx 98x.JT9xx.JT98.x AKx.xx.AKxx.KQJx 0.25000']"
       ]
      },
      "execution_count": 6,
