--- a/UCBC 2024/Simulations/OpeningLead6S.ipynb
+++ b/UCBC 2024/Simulations/OpeningLead6S.ipynb
@@ -52,11 +52,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW2-bidding-3233000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW2-binfo-808000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-3961000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-1887000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-1562000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/dummy-920000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty-1000000\n",
@@ -129,17 +129,17 @@
      "data": {
       "text/plain": [
        "[{'card': 'HA',\n",
-       "  'insta_score': 0.3214,\n",
-       "  'expected_tricks_sd': 11.422,\n",
-       "  'p_make_contract': 0.516},\n",
+       "  'insta_score': 0.303,\n",
+       "  'expected_tricks_sd': 10.15,\n",
+       "  'p_make_contract': 0.1},\n",
        " {'card': 'CQ',\n",
-       "  'insta_score': 0.3945,\n",
-       "  'expected_tricks_sd': 11.433,\n",
-       "  'p_make_contract': 0.528},\n",
+       "  'insta_score': 0.473,\n",
+       "  'expected_tricks_sd': 10.02,\n",
+       "  'p_make_contract': 0.07},\n",
        " {'card': 'Dx',\n",
-       "  'insta_score': 0.2199,\n",
-       "  'expected_tricks_sd': 11.52,\n",
-       "  'p_make_contract': 0.565}]"
+       "  'insta_score': 0.163,\n",
+       "  'expected_tricks_sd': 9.74,\n",
+       "  'p_make_contract': 0.04}]"
       ]
      },
      "execution_count": 5,
@@ -173,23 +173,16 @@
     {
      "data": {
       "text/plain": [
-       "['98x.T.Kxx.AKT9xx xxx.Kx.JT9xxx.8x AKQJTx.QJ8x.A.xx 0.38323',\n",
-       " 'xxxx.Kx.x.AK9xxx JT9.QJ8.JT9xx.8x AKQ8x.Tx.AKxx.Tx 0.37654',\n",
-       " '9xx.KJ.Kx.AT9xxx T8x.Tx.JT9xxx.Kx AKQJxx.Q8x.Ax.8x 0.35281',\n",
-       " 'T9xx.Qx.KJx.AK98 8x.8x.T9xxx.xxxx AKQJxx.KJT.Ax.Tx 0.33033',\n",
-       " '9xx.JT.Kxx.AKTxx T8.8xx.ATxxx.98x AKQJxxx.KQ.J9.xx 0.30402',\n",
-       " 'Txx.KT.J9x.AK9xx J8x.Q8x.Txxx.Txx AKQ9xx.Jx.AKx.8x 0.30138',\n",
-       " 'KJx.T.Kxxx.Kxxxx T9xx.xx.JT9xx.Ax AQ8xx.KQJ8.A.T98 0.28540',\n",
-       " 'J8x.KTx.Tx.AK8xx xxx.QJ.9xxxx.9xx AKQT9x.8x.AKJ.Tx 0.28250',\n",
-       " '8xx.J.K9x.AKTxxx xx.T8x.JTxxxx.8x AKQJT9x.KQx.A.9x 0.28136',\n",
-       " 'T9x.K8xx.Jx.AKT9 Jxx.T.KT9xx.8xxx AKQ8xx.QJ.Axx.xx 0.26982',\n",
-       " '8xx.T8.KJx.AK9xx Txxx.QJx.9xxx.Tx AKQJ9.Kx.ATx.8xx 0.26436',\n",
-       " 'Txxx.KJ.Tx.AK8xx xx.Txx.K9xxx.9xx AKQJ98.Q8.AJx.Tx 0.26358',\n",
-       " '8xx.QJx.9.AKT8xx 9x.T8x.AJxxxx.9x AKQJTxx.K.KTx.xx 0.25881',\n",
-       " 'J98.KTx.xx.AK8xx xxx.J8x.JT9xxx.T AKQTxx.Q.AK.9xxx 0.25784',\n",
-       " '9xxx..KTx.AKT9xx J8x.8xx.J9xxx.xx AKQTx.KQJT.Ax.8x 0.25737',\n",
-       " 'JT9x.Kx.Tx.AKTxx 8xx.J8x.J9xx.8xx AKQxx.QT.AKxx.9x 0.25682',\n",
-       " 'xxx.Jx.Kxx.AKxxx QT8x.T.JTxxx.98x AKJ9x.KQ8x.A9.Tx 0.25545']"
+       "['T9xx.KT8.x.AKT8x Jx.Qx.JT9xx.9xxx AKQ8xx.Jx.AKxx.x 0.28576',\n",
+       " 'A8xx.x.K9x.KT98x T9x.T8x.Txx.Axxx KQJxx.KQJ.AJxx.x 0.27957',\n",
+       " '98x.x.Kxx.AKTxxx Jx.JT8x.JT9xxx.x AKQTxxx.KQ.A.98x 0.25140',\n",
+       " 'Txxx..Kxx.AKxxxx 98.T8xx.ATxx.98x AKQJxx.KQJ.J9x.T 0.24459',\n",
+       " 'Txx.x.K9x.AKT9xx Jxxx.JT8.JTxx.xx AKQ98.KQx.Axx.8x 0.21728',\n",
+       " 'JT9..KJxx.AK8xxx 8xx.J8xx.Txxx.xx AKQxxx.KQT.A9.T9 0.21333',\n",
+       " 'Txxx.xx.Kx.AKT8x Jxx.T8.JTxxx.9xx AKQ98.KQJ.A9x.xx 0.20875',\n",
+       " 'T9x.K8xx.x.AKT9x Jxx.JT.JT9xx.8xx AKQ8xx.Q.AKxx.xx 0.20628',\n",
+       " 'Txx.Kxx.9.AK9xxx 98x.QT8.KTxxx.Tx AKQJxx.J.AJxx.8x 0.20197',\n",
+       " 'JT8.QJT8.x.AKT9x xx.xx.AT9xxx.8xx AKQ9xxx.K.KJx.xx 0.19949']"
       ]
      },
      "execution_count": 6,
