--- a/src/examples/OpeningLead-hf.ipynb
+++ b/src/examples/OpeningLead-hf.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e299ffcc-5180-4607-b6f8-c7280208d9c6",
    "metadata": {
     "tags": []
@@ -25,10 +25,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "26570686",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Python311\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:107: disable_resource_variables (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "non-resource variables are not supported in the long term\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "os.chdir('..')\n",
@@ -41,10 +51,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "fe373c76",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Python311\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 14.45it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 14.54it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 14.16it/s]\n",
+      "Fetching 5 files: 100%|██████████| 5/5 [00:00<00:00, 14.71it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'D:\\\\github\\\\ben\\\\src\\\\hfmodels'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import huggingface_hub\n",
     "import os\n",
@@ -61,12 +94,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "627ca134-93a3-4d36-bc4d-a1207d84cd88",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from hfmodels/lead-1000000\n",
+      "INFO:tensorflow:Restoring parameters from hfmodels/lead-1000000\n",
+      "INFO:tensorflow:Restoring parameters from hfmodels/binfo-100000\n",
+      "INFO:tensorflow:Restoring parameters from hfmodels/bidding-100000\n",
+      "INFO:tensorflow:Restoring parameters from hfmodels/lr3-1000000\n"
+     ]
+    }
+   ],
    "source": [
     "from nn.leader import Leader\n",
     "from nn.bid_info import BidInfo\n",
@@ -77,13 +122,13 @@
     "biddinginfo = BidInfo(f'{folder}/binfo-100000')\n",
     "bidder = Bidder(\"\", f'{folder}/bidding-100000')\n",
     "sd_model = LeadSingleDummy(f'{folder}/lr3-1000000')\n",
-    "models = Models(bidder, biddinginfo, lead_suit, lead_nt, sd_model, None, 0.1, 0.05, 1.0, 0.1, False, -1, -1)\n",
-    "sampler = Sample(0.01, 0.1, 0.03, 0.05, 64, 5000, 5000, 128, 100, False)"
+    "models = Models(bidder, biddinginfo, lead_suit, lead_nt, sd_model, None, None, 0.1, 0.05, 1.0, 0.1, False, -1, -1, False, True, False, False, 1)\n",
+    "sampler = Sample(0.01, 0.1, 0.03, 0.05, 64, 10, 5000, 5000, 128, 100, 10, 500, False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c3397678",
    "metadata": {},
    "outputs": [],
@@ -102,10 +147,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a2b5fe25",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "H7"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lead.card"
    ]
@@ -122,10 +178,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "956ef356",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'card': 'Hx',\n",
+       "  'insta_score': 0.612,\n",
+       "  'expected_tricks_sd': 9.34,\n",
+       "  'p_make_contract': 0.51},\n",
+       " {'card': 'DA',\n",
+       "  'insta_score': 0.159,\n",
+       "  'expected_tricks_sd': 9.38,\n",
+       "  'p_make_contract': 0.51},\n",
+       " {'card': 'HT',\n",
+       "  'insta_score': 0.065,\n",
+       "  'expected_tricks_sd': 9.35,\n",
+       "  'p_make_contract': 0.51}]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lead.to_dict()['candidates']"
    ]
@@ -145,10 +223,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7cb2bf98",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['KQx.AJx..KQ8xxxx AJx.Kxx.KJxxx.JT 98xx.9xx.QTxxx.A 0.09477',\n",
+       " 'Axx.AK9x.x.AQxxx K9x.xx.QJxxx.KJ8 QJ8x.Jxx.KTxx.Tx 0.07342',\n",
+       " 'KJx.AJ9x.K.KJ8xx A8x.xxx.JTxxx.Ax Q9xx.Kx.Qxxx.QTx 0.06904',\n",
+       " 'AKQ.AJxx..QT8xxx 8xx.xx.KQxxxx.AJ J9xx.K9x.JTxx.Kx 0.06505',\n",
+       " 'Qxx.AJ9x.K.AQJ8x K9x.xx.QTxxx.KTx AJ8x.Kxx.Jxxx.xx 0.05431',\n",
+       " 'J9x.AKJx.x.AQ8xx A8x.9xx.QJxxx.Jx KQxx.xx.KTxx.KTx 0.05310',\n",
+       " 'A9x.KJ9x.x.AK8xx Kxx.Ax.QTxxx.JTx QJ8x.xxx.KJxx.Qx 0.05246',\n",
+       " 'Kx.K9xx.xx.AKQxx AJx.Jx.QTxxx.J8x Q98xx.Axx.KJx.Tx 0.04814',\n",
+       " 'AJ8.xxx..AKQ8xxx K9x.AKJx.Jxxxx.x Qxxx.9x.KQTxx.JT 0.04288',\n",
+       " 'K9x.Jx.x.AKQJ8xx Ax.K9xx.QJTxxx.x QJ8xx.Axx.Kxx.Tx 0.03857']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# each row is one sample board\n",
     "# the hands are in the order: LHO, Partner, RHO. Your cards are not shown as they are fixed/\n",
