--- a/UCBC 2024/Simulations/Bidding4SX.ipynb
+++ b/UCBC 2024/Simulations/Bidding4SX.ipynb
@@ -51,11 +51,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW2-bidding-3233000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW2-binfo-808000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-3961000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-1887000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-1562000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/dummy-920000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty-1000000\n",
@@ -85,8 +85,8 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': '1S', 'insta_score': 0.8339, 'expected_score': 78, 'adjustment': 42},\n",
-       " {'call': '2S', 'insta_score': 0.1631, 'expected_score': 51, 'adjustment': 8}]"
+       "[{'call': '1S', 'insta_score': 0.713, 'expected_score': 38, 'adjustment': 36},\n",
+       " {'call': '2S', 'insta_score': 0.281, 'expected_score': 33, 'adjustment': 14}]"
       ]
      },
      "execution_count": 3,
@@ -126,7 +126,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'call': 'PASS', 'insta_score': 0.993}]"
+       "[{'call': 'PASS', 'insta_score': 0.942}]"
       ]
      },
      "execution_count": 4,
@@ -150,16 +150,16 @@
     {
      "data": {
       "text/plain": [
-       "['KJxxxx.9.A.QJT8x x.AKJ8xxxx.xx.A9 Qx.Txx.K8x.Kxxxx AT98.Q.QJT9xxx.x 0.39012',\n",
-       " 'KJxxxx.9.A.QJT8x AQ.AQJTxxx.J8x.x 8.K8xx.Txx.Kxxxx T9xx.x.KQ9xxx.A9 0.36071',\n",
-       " 'KJxxxx.9.A.QJT8x 8x.AKJTxxx.x.AKx A.8xx.T9xxx.9xxx QT9x.Qx.KQJ8xx.x 0.31275',\n",
-       " 'KJxxxx.9.A.QJT8x xx.AQJ8xx.Kx.Axx 9.Kxxx.9xxx.Kxxx AQT8.Tx.QJT8xx.9 0.30764',\n",
-       " 'KJxxxx.9.A.QJT8x 9x.AKQxxxx.xx.Ax T.Txx.QJxx.K9xxx AQ8x.J8.KT98xx.x 0.27324',\n",
-       " 'KJxxxx.9.A.QJT8x Q8.AQJT8xxx.Kx.K x.Kxxx.JTxx.xxxx AT9x..Q98xxx.A9x 0.25882',\n",
-       " 'KJxxxx.9.A.QJT8x Q8.KQJT8xx.T9.Ax 9.Axx.Jxxx.K9xxx ATxx.xx.KQ8xxx.x 0.25252',\n",
-       " 'KJxxxx.9.A.QJT8x x.AKQ8xx.Q9x.Kxx QT.JTxx.8xx.Axxx A98x.xx.KJTxxx.9 0.24375',\n",
-       " 'KJxxxx.9.A.QJT8x QT.AT8xxxx.x.AKx 8.KQJxx.QT9xx.xx A9xx..KJ8xxx.9xx 0.19063',\n",
-       " 'KJxxxx.9.A.QJT8x 98x.AKQJxx.x.K9x Qx.Txxx.KQx.Axxx AT.8x.JT98xxxx.x 0.18854']"
+       "['KJxxxx.9.A.QJT8x Axx.AJ8xxx.KJx.x QT.KTxx.9x.K9xxx 98.Qx.QT8xxxx.Ax 0.21122',\n",
+       " 'KJxxxx.9.A.QJT8x A.AK8xxxx.8x.A9x QT.JTxx.T9xx.xxx 98xx.Q.KQJxxx.Kx 0.15015',\n",
+       " 'KJxxxx.9.A.QJT8x Ax.KQxxxx.Kxx.A9 8x.T8xx.Q9.Kxxxx QT9.AJ.JT8xxxx.x 0.14997',\n",
+       " 'KJxxxx.9.A.QJT8x Axx.AQT8x.KJ.Kxx T9.Jxxxx.xxx.A9x Q8.Kx.QT98xxx.xx 0.14625',\n",
+       " 'KJxxxx.9.A.QJT8x A9.KQT8xx.9x.Axx T8.Axxx.K8x.9xxx Qxx.Jx.QJTxxxx.K 0.14361',\n",
+       " 'KJxxxx.9.A.QJT8x 98.AKJ8xxx.Q8.Ax T.QTx.Txxx.Kxxxx AQxx.xx.KJ9xxx.9 0.14015',\n",
+       " 'KJxxxx.9.A.QJT8x AQ.A8xxxx.Kx.xxx T8x.QJTx.QTx.K9x 9x.Kx.J98xxxx.Ax 0.12611',\n",
+       " 'KJxxxx.9.A.QJT8x A8x.KJTxx.Kx.K9x Tx.AQ8xx.Jxx.xxx Q9.xx.QT98xxx.Ax 0.12165',\n",
+       " 'KJxxxx.9.A.QJT8x ATx.KT8xxx.KQ.Kx 8x.Qxxx.xxx.Axxx Q9.AJ.JT98xxx.9x 0.12052',\n",
+       " 'KJxxxx.9.A.QJT8x Qx.KQJTxx.KJ.K9x A98.A8xx.8xx.xxx Tx.xx.QT9xxxx.Ax 0.11876']"
       ]
      },
      "execution_count": 5,
@@ -180,13 +180,13 @@
      "data": {
       "text/plain": [
        "[{'call': 'PASS',\n",
-       "  'insta_score': 0.9984,\n",
-       "  'expected_score': -293,\n",
+       "  'insta_score': 0.998,\n",
+       "  'expected_score': -91,\n",
        "  'adjustment': 50},\n",
-       " {'call': 'X',\n",
-       "  'insta_score': 0.0012,\n",
-       "  'expected_score': -375,\n",
-       "  'adjustment': -400}]"
+       " {'call': '4S',\n",
+       "  'insta_score': 0.002,\n",
+       "  'expected_score': -478,\n",
+       "  'adjustment': -1433}]"
       ]
      },
      "execution_count": 6,
@@ -211,42 +211,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KJxxxx.9.A.QJT8x T8xx.AK8.T9xxx.K 9.QTxx.KQJx.A9xx AQ.Jxxxx.8xx.xxx\n",
-      "KJxxxx.9.A.QJT8x Q8x.QJxx.KJ9x.Kx T.AKT8.T8xx.Axxx A9x.xxxx.Qxxx.9x\n",
-      "KJxxxx.9.A.QJT8x AQT.JTxx.xxxxx.K x.AQ8x.KQT9.9xxx 98x.Kxxx.J8x.Axx\n",
-      "KJxxxx.9.A.QJT8x Axx.Jxx.J98x.AK9 T.Axxx.KQxxx.xxx Q98.KQT8x.Txx.xx\n",
-      "KJxxxx.9.A.QJT8x AQxx.Kxxx.QT9x.x 8.QJ8x.KJ8xx.A9x T9.ATxx.xxx.Kxxx\n",
-      "KJxxxx.9.A.QJT8x AT8.QTxx.QJxx.Kx 9.AJxx.K98xx.Axx Qxx.K8xx.Txx.9xx\n",
-      "KJxxxx.9.A.QJT8x QT.Qxxxx.QJ9x.A9 9.AKJx.8xxxx.Kxx A8xx.T8x.KTx.xxx\n",
-      "KJxxxx.9.A.QJT8x 98x.AJ8xx.xxx.A9 x.KTxx.KJ98xx.Kx AQT.Qxx.QTx.xxxx\n",
-      "KJxxxx.9.A.QJT8x AT9x.KTxx.KQx.9x x.Axxx.T9xxxx.AK Q8.QJ8x.J8x.xxxx\n",
-      "KJxxxx.9.A.QJT8x xx.AJxx.Txx.A9xx 9.KTxx.KQ9xxx.Kx AQT8.Q8xx.J8x.xx\n",
-      "KJxxxx.9.A.QJT8x AT9x.KTxx.JT9x.x x.QJ8x.K8xxx.AK9 Q8.Axxx.Qxx.xxxx\n",
-      "KJxxxx.9.A.QJT8x T8x.xxx.Qxxx.AKx x.AQxx.KJT98.9xx AQ9.KJT8x.xxx.xx\n",
-      "KJxxxx.9.A.QJT8x A9x.ATxx.Qxx.xxx T.K8xx.KJ8xxx.K9 Q8x.QJxx.T9x.Axx\n",
-      "KJxxxx.9.A.QJT8x A8x.Kxxxx.JTx.Ax 9.AJ8x.KQ9xxx.Kx QTx.QTx.8xx.9xxx\n",
-      "KJxxxx.9.A.QJT8x T9x.Txxx.QJx.AKx x.AKJx.KTxxxx.9x AQ8.Q8xx.98x.xxx\n",
-      "KJxxxx.9.A.QJT8x T98.AKx.KJx.xxxx A.Jxxx.T8xxx.A9x Qxx.QT8xx.Q9xx.K\n",
-      "KJxxxx.9.A.QJT8x Q8xx.AJTxx.Kxxx. T.Kxxx.Q9x.Axxxx A9.Q8x.JT8xx.K9x\n",
-      "KJxxxx.9.A.QJT8x Qxx.AT8xx.8xx.Kx 9.Kxxx.KQT9xx.A9 AT8.QJx.Jxx.xxxx\n",
-      "KJxxxx.9.A.QJT8x Qxx.AJxxx.Qxx.9x 9.KQxx.KT8xx.Axx AT8.T8x.J9xx.Kxx\n",
-      "KJxxxx.9.A.QJT8x AQ9.J8xx.JTx.9xx 8.KQTx.K9xxx.Axx Txx.Axxx.Q8xx.Kx\n",
-      "KJxxxx.9.A.QJT8x AT98.QTxx.JT9.xx x.Axxx.Q8xxx.AK9 Qx.KJ8x.Kxxx.xxx\n",
-      "KJxxxx.9.A.QJT8x QTxx.KTx.Kxx.9xx 9.Axxx.QJ9xx.Axx A8.QJ8xx.T8xx.Kx\n",
-      "KJxxxx.9.A.QJT8x 9xx.AQT8.K9x.A9x A.KJxx.QJxxx.xxx QT8.xxxx.T8xx.Kx\n",
-      "KJxxxx.9.A.QJT8x AQTx.xxx.98x.K9x 9.KTxx.QJTxx.Axx 8x.AQJ8x.Kxxx.xx\n",
-      "KJxxxx.9.A.QJT8x AT.Qxxx.KQJ8.xxx 9.AKJT.9xxxx.A9x Q8xx.8xxx.Txx.Kx\n",
-      "KJxxxx.9.A.QJT8x QTx.Axx.J8xx.xx 9.T8xx.KQxx.AK9x Ax.KQJxx.T9xx.xx\n",
-      "KJxxxx.9.A.QJT8x ATx.Axxx.Q98x.9x Q.QJxx.Kxxx.AKxx 98x.KT8x.JTxx.xx\n",
-      "KJxxxx.9.A.QJT8x AT8.KTxx.Txx.xxx Q.QJxx.Kxx.AK9xx 9xx.A8xx.QJ98xx.\n",
-      "KJxxxx.9.A.QJT8x AT8.Q8xxx.KQx.Kx x.AKJx.JT98.9xxx Q9x.Txx.xxxxx.Ax\n",
-      "KJxxxx.9.A.QJT8x T9x.Qxxxx.T98.Ax Q.AKT8.QJxx.K9xx A8x.Jxx.Kxxxx.xx\n",
-      "KJxxxx.9.A.QJT8x Ax.AJ8xx.KJxxx.x x.KQxx.T98x.A9xx QT98.Txx.Qxx.Kxx\n",
-      "KJxxxx.9.A.QJT8x ATx.A8xx.KJTx.xx Q.JTxx.Qxxxx.Axx 98x.KQxx.98x.K9x\n",
-      "KJxxxx.9.A.QJT8x Q9.AKTx.QJT9.Axx A.QJxx.K8xxx.K9x T8xx.8xxx.xxx.xx\n",
-      "KJxxxx.9.A.QJT8x AQ98x.Txxx.K8x.A .KQJx.T9xxxx.Kxx Tx.A8xx.QJx.9xxx\n",
-      "KJxxxx.9.A.QJT8x ATx.KQxx.J98.Kxx Q.J8xx.KTxx.A9xx 98x.ATxx.Qxxxx.x\n",
-      "KJxxxx.9.A.QJT8x AT8.AJxxx.T9x.9x Q.KQTx.KQ8xx.Kxx 9xx.8xx.Jxxx.Axx\n"
+      "KJxxxx.9.A.QJT8x AQx.JTxxx.xxx.xx x.AQ8x.QT9xx.A9x T98.Kxx.KJ8x.Kxx\n",
+      "KJxxxx.9.A.QJT8x Q8x.JTxxx.Kxx.Kx T.A8xx.QT98x.Axx A9x.KQx.Jxxx.9xx\n",
+      "KJxxxx.9.A.QJT8x QT8.ATxx.Txx.Kxx 9.KQxx.KQ8xx.A9x Axx.J8xx.J9xx.xx\n",
+      "KJxxxx.9.A.QJT8x T9x.AQTx.T9xx.Kx x.Jxxx.KJ8xx.Axx AQ8.K8xx.Qxx.9xx\n",
+      "KJxxxx.9.A.QJT8x A8x.J8xxx.xx.Kxx 9.AKQx.QJT8x.Axx QTx.Txx.K9xxx.9x\n",
+      "KJxxxx.9.A.QJT8x Q8x.JTxxx.9xx.Kx x.AK8x.KQ8xx.A9x AT9.Qxx.JTxx.xxx\n",
+      "KJxxxx.9.A.QJT8x AT9.J8xxx.Kx.xxx Q.ATxx.QJ9xxx.Ax 8xx.KQx.T8xx.K9x\n",
+      "KJxxxx.9.A.QJT8x ATx.KJxxx.Q9x.Ax 9.AQxx.Kxxxx.K9x Q8x.T8x.JT8x.xxx\n",
+      "KJxxxx.9.A.QJT8x QTx.Kxxxx.xx.9xx A.QJ8x.KT9xxxx.K 98x.ATx.QJ8.Axxx\n",
+      "KJxxxx.9.A.QJT8x T8x.AKT8x.xx.A9x Q.xxxx.KJxxx.Kxx A9x.QJx.QT98x.xx\n"
      ]
     }
    ],
