--- a/UCBC 2024/Simulations/OpeningLead6H.ipynb
+++ b/UCBC 2024/Simulations/OpeningLead6H.ipynb
@@ -52,11 +52,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW2-bidding-3233000\n",
-      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW2-binfo-808000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-bidding-3961000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/NS1EW99-binfo-1887000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_suit-154000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lead_nt-59000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lr3-1000000\n",
+      "INFO:tensorflow:Restoring parameters from ..\\Models/single_dummy-1562000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/lefty-1000000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/dummy-920000\n",
       "INFO:tensorflow:Restoring parameters from ..\\Models/righty-1000000\n",
@@ -97,7 +98,7 @@
     {
      "data": {
       "text/plain": [
-       "DJ"
+       "SK"
       ]
      },
      "execution_count": 4,
@@ -128,18 +129,18 @@
     {
      "data": {
       "text/plain": [
-       "[{'card': 'DJ',\n",
-       "  'insta_score': 0.2608,\n",
-       "  'expected_tricks_sd': 12.302,\n",
-       "  'p_make_contract': 0.834},\n",
+       "[{'card': 'SK',\n",
+       "  'insta_score': 0.263,\n",
+       "  'expected_tricks_sd': 12.65,\n",
+       "  'p_make_contract': 0.94},\n",
+       " {'card': 'DJ',\n",
+       "  'insta_score': 0.414,\n",
+       "  'expected_tricks_sd': 12.54,\n",
+       "  'p_make_contract': 0.91},\n",
        " {'card': 'C8',\n",
-       "  'insta_score': 0.2018,\n",
-       "  'expected_tricks_sd': 12.374,\n",
-       "  'p_make_contract': 0.855},\n",
-       " {'card': 'SK',\n",
-       "  'insta_score': 0.4152,\n",
-       "  'expected_tricks_sd': 12.451,\n",
-       "  'p_make_contract': 0.877}]"
+       "  'insta_score': 0.232,\n",
+       "  'expected_tricks_sd': 12.55,\n",
+       "  'p_make_contract': 0.91}]"
       ]
      },
      "execution_count": 5,
@@ -173,16 +174,16 @@
     {
      "data": {
       "text/plain": [
-       "['.AT9x.KQxx.AKQTx Txxx.J.Axxx.9xxx AJ9x.KQxxx.8.Jxx 0.23006',\n",
-       " 'x.KQxx.KQ.AKQxxx 9xx.x.xxxxx.JT9x AJTx.AJT9x.A8.xx 0.21182',\n",
-       " 'x.AKJ9.KQx.KQJxx 9xx.x.8xxx.ATxxx AJTx.QTxxx.Ax.9x 0.20879',\n",
-       " '.QT9x.AKx.AKQ9xx Jxxx.J.Qxxx.JTxx AT9x.AKxxx.8x.xx 0.17365',\n",
-       " '.QJTx.AKxx.AKxxx Jxxx.xx.Q8.QJT9x AT9x.AK9x.xxx.xx 0.15873',\n",
-       " 'A.QTxx.Kx.AKQJxx J9xx..Qxxxx.Txxx Txx.AKJ9xx.A8.9x 0.15777',\n",
-       " '.A9xx.KQxx.AKQJx 9xxx.Kx.8xxx.9xx AJTx.QJTx.A.Txxx 0.15775',\n",
-       " '.QJ9xx.AK.AKQxxx JTxx..Q8xxxx.JT9 A9xx.AKTxx.x.xxx 0.13900',\n",
-       " '9.AQxx.Kxx.AKQxx Jxx.Tx.Q8xxx.T9x ATxx.KJ9x.A.Jxxx 0.13728',\n",
-       " '.A9xx.AKx.KQJxxx Txxx.xx.Qxxx.ATx AJ9x.KQJT.8x.9xx 0.13680']"
+       "['.A9xx.KQx.AKQJxx 9xxx.K.8xxxx.9xx AJTx.QJTxx.A.Txx 0.12598',\n",
+       " 'x.KJxx.Ax.AKQJxx Jxxx.9.Q8xx.9xxx AT9.AQTxx.Kxx.Tx 0.10436',\n",
+       " 'x.AK9x.Kxx.AKQTx JTxx.T.Q8xx.xxxx A9x.QJxxx.Ax.J9x 0.09034',\n",
+       " 'x.ATxx.AKx.AKQTx JT9x.x.8xx.J9xxx Axx.KQJ9x.Qxx.xx 0.08665',\n",
+       " 'J.AJxx.Kx.AKQTxx xxx.x.Q8xxx.J9xx AT9x.KQT9x.Ax.xx 0.08650',\n",
+       " 'A.AT9x.K8x.AKQxx xxx.Jx.Qxx.JT9xx JT9x.KQxx.Axx.xx 0.08297',\n",
+       " 'A.KJ9x.KQx.AK9xx Txxxx.xx.xxx.QTx J9.AQTx.A8x.Jxxx 0.07943',\n",
+       " 'x.AT9x.AK8.AKQTx T9xx.xx.xxxx.9xx AJx.KQJx.Qx.Jxxx 0.07930',\n",
+       " '9.KJ9x.AK.AKQJxx Jxxx.x.Qxxxx.xxx ATx.AQTxx.8x.T9x 0.07679',\n",
+       " 'A.KJTx.AKx.KT9xx JTxxx.x.xxxx.Axx 9x.AQ9xx.Q8.QJxx 0.07632']"
       ]
      },
      "execution_count": 6,
